--- a/src/app/taskmodule/task-list/task-list.component.html
+++ b/src/app/taskmodule/task-list/task-list.component.html
@@ -33,7 +33,7 @@
                 <ng-container matColumnDef="ticketid">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Company">
                         Ticket ID </th>
-                    <td mat-cell *matCellDef="let element" ><a style="cursor: pointer;" (click)="popup(element.taskid, element.ticketid)">{{ element.ticketid }} </a> </td>
+                    <td mat-cell *matCellDef="let element" ><a style="cursor: pointer;color:#0d6efd" (click)="popup(element.taskid, element.ticketid)">{{ element.ticketid }} </a> </td>
                 </ng-container>
                 <ng-container matColumnDef="taskname">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Company"> Task
