--- a/src/app/taskmodule/task-report/task-report.component.html
+++ b/src/app/taskmodule/task-report/task-report.component.html
@@ -1,150 +1,117 @@
 <div class="container">
-    <ul class="breadcrumb">
-      <li><a (click)="navigateToDashboard()">Home</a></li>
-      <li class="last">Task Report</li>
-    </ul>
-    <form [formGroup]="taskReport">
-  
-      <mat-card mt-3 style="z-index: 1">
-        <mat-card-content>
-          <mat-form-field color="accent">
-            <mat-label>Choose Starting Date</mat-label>
-            <input matInput [matDatepicker]="picker1" formControlName="startDate" />
-            <mat-hint>MM/DD/YYYY</mat-hint>
-            <mat-datepicker-toggle matIconSuffix [for]="picker1"></mat-datepicker-toggle>
-            <mat-datepicker #picker1></mat-datepicker>
-          </mat-form-field>
-          &nbsp;&nbsp;
-  
-          <mat-form-field color="accent">
-            <mat-label>Choose Target Date</mat-label>
-            <input matInput [matDatepicker]="picker2" formControlName="targetDate" />
-            <mat-hint>MM/DD/YYYY</mat-hint>
-            <mat-datepicker-toggle matIconSuffix [for]="picker2"></mat-datepicker-toggle>
-            <mat-datepicker #picker2 color="primary"></mat-datepicker> </mat-form-field>&nbsp;&nbsp;
-  
-          &nbsp; &nbsp;
-        <mat-form-field>
-            <mat-label>Select Department</mat-label>
-            <mat-select formControlName="department">
-                <ng-container *ngFor="let department of deptOptions;">
-                    <mat-option [value]="department.name">{{department.name}}</mat-option>
-                </ng-container>
-            </mat-select>
-        </mat-form-field>
-  
-          <button (click)="onSubmit()" mat-raised-button color="primary">Submit</button>
-          <button (click)="reset()" mat-raised-button color="warn">Reset</button>
-        </mat-card-content>
-      </mat-card>
-    </form>
-  
-    <mat-card class="matcards ">
+  <ul class="breadcrumb">
+    <li><a (click)="navigateToDashboard()">Home</a></li>
+    <li class="last">Task Report</li>
+  </ul>
+  <form [formGroup]="taskReport">
+
+    <mat-card mt-3 style="z-index: 1">
       <mat-card-content>
-        <div id="table-container" class="table-wrapper">
-          <section class="section">
-            <div class="row scroll" style="height:600px;">
-              <table class="table table-sm  table-light table-bordered table-responsive">
-                <thead class="thead-light sticky">
-                  <tr>
-                    <th>#</th>
-                    <th>Date</th>
-                    <th>TicketId</th>
-                    <th>TaskName</th>
-                    <th>TargetDate</th>
-                    <th>Status</th>
-                    <th>Description</th>
-                    <th>UserName</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <!-- <tr *ngFor="let data of c_data let i=index">
-                    <td let i=index nowrap>{{ generateSerialNumber(i)}}</td>
-                    <td *ngIf="groupby=='employee' && groupby!==consultant" style="font-weight: bold;">
-                      {{data.pseudoname}}
-                    </td>
-  
-                    <td *ngIf="groupby=='consultant'" style="font-weight: bold;">
-                      {{data.consultantname}}
-                    </td>
-  
-                    <td *ngIf="groupby=='requirements'" style="font-weight: bold;">
-                      {{data.company}}
-                    </td>
-                    <td *ngIf="flag3" style="font-weight: bold;">
-                      {{data.req_count}}
-                    </td>
-                    <td class="narvee">
-                      <a
-                        (click)="drilldown(data.id,'submission',data.pseudoname,data.consultantname,data.company)">{{data.submission}}</a>
-                    </td>
-                    <td class="narvee">
-                      <a (click)="drilldown(data.id,'interview',data.pseudoname,data.consultantname,data.company)"
-                        data-bs-toggle="modal" data-bs-target="#interview">{{data.interview}}</a>
-                    </td>
-                    <td class="narvee">
-                      <a (click)="drilldown(data.id,'Schedule',data.pseudoname,data.consultantname,data.company)"
-                        data-bs-toggle="modal" data-bs-target="#interview">{{data.schedule}}</a>
-                    </td>
-                    <td class="narvee">
-                      <a (click)="drilldown(data.id ,'Hold',data.pseudoname,data.consultantname,data.company)"
-                        data-bs-toggle="modal" data-bs-target="#interview">{{data.onhold}}</a>
-                    </td>
-                    <td class="narvee">
-                      <a (click)="drilldown(data.id,'Closed',data.pseudoname,data.consultantname,data.company)"
-                        data-bs-toggle="modal" data-bs-target="#interview">{{data.closed}}</a>
-                    </td>
-                    <td class="narvee">
-                      <a (click)="drilldown(data.id,'Rejected',data.pseudoname,data.consultantname,data.company)"
-                        data-bs-toggle="modal" data-bs-target="#interview">{{data.rejected}}</a>
-                    </td>
-                    <td class="narvee">
-                      <a (click)="drilldown(data.id,'onboarded',data.pseudoname,data.consultantname,data.company)"
-                        data-bs-toggle="modal" data-bs-target="#interview">{{data.onboarded}}</a>
-                    </td>
-                    <td class="narvee">
-                      <a (click)="drilldown(data.id,'backout',data.pseudoname,data.consultantname,data.company)"
-                        data-bs-toggle="modal" data-bs-target="#interview">{{data.backout}}</a>
-                    </td>
-                    <td class="narvee" *ngIf="flag2">
-                      <a (click)="drilldown(data.id,'consultant',data.pseudoname,data.consultantname,data.company)"
-                        data-bs-toggle="modal" data-bs-target="#consultantInfo">{{data.consultant}} </a>
-                    </td>
-  
-                    <td class="narvee">
-                      <a (click)="drilldown(data.id,'Selected',data.pseudoname,data.consultantname,data.company)"
-                        data-bs-toggle="modal" data-bs-target="#interview">{{data.selected}} </a>
-                    </td>
-                  </tr>
-                  <tr class="narvee total sticky"> -->
-                    <!-- <td colspan="2">Total</td>
-                    <td *ngIf="flag3">{{reqsTotal}}</td>
-                    <td>{{subTotal}}</td>
-                    <td>{{intTotal}}</td>
-                    <td>{{scheduleTotal}}</td>
-                    <td>{{holdTotal}}</td>
-                    <td>{{closedTotal}}</td>
-                    <td>{{rejectTotal}}</td>
-                    <td>{{onboardedCnt}}</td>
-                    <td>{{backoutCnt}}</td>
-                    <td *ngIf="flag2">{{consultantTotal}}</td>
-                    <td>{{selectTotal}}</td>
-                  </tr> -->
-                </tbody>
-              </table>
-            </div>
-          </section>
-        </div>
-  
-        <div class="paginator">
-          <!-- paginator -->
-          <!-- <mat-paginator (page)="handlePageEvent($event)" [length]="totalItems" [pageSize]="pageSize" [disabled]="false"
+        <mat-form-field color="accent">
+          <mat-label>Choose Starting Date</mat-label>
+          <input matInput [matDatepicker]="picker1" formControlName="startDate" />
+          <mat-hint>MM/DD/YYYY</mat-hint>
+          <mat-datepicker-toggle matIconSuffix [for]="picker1"></mat-datepicker-toggle>
+          <mat-datepicker #picker1></mat-datepicker>
+        </mat-form-field>
+        &nbsp;&nbsp;
+
+        <mat-form-field color="accent">
+          <mat-label>Choose Target Date</mat-label>
+          <input matInput [matDatepicker]="picker2" formControlName="targetDate" />
+          <mat-hint>MM/DD/YYYY</mat-hint>
+          <mat-datepicker-toggle matIconSuffix [for]="picker2"></mat-datepicker-toggle>
+          <mat-datepicker #picker2 color="primary"></mat-datepicker> </mat-form-field>&nbsp;&nbsp;
+
+        &nbsp; &nbsp;
+        <mat-form-field>
+          <mat-label>Select Department</mat-label>
+          <mat-select formControlName="department">
+            <ng-container *ngFor="let department of deptOptions;">
+              <mat-option [value]="department.name">{{department.name}}</mat-option>
+            </ng-container>
+          </mat-select>
+        </mat-form-field>
+
+        <button (click)="onSubmit()" mat-raised-button color="primary">Submit</button>
+        <button (click)="reset()" mat-raised-button color="warn">Reset</button>
+      </mat-card-content>
+    </mat-card>
+  </form>
+
+  <mat-card class="matcards ">
+    <mat-card-content>
+      <div id="table-container" class="table-wrapper">
+        <section class="section">
+          <div class="row scroll" style="height:600px;">
+            <table class="table table-sm  table-light table-bordered table-responsive">
+              <thead class="thead-light sticky">
+                <tr>
+                  <th>#</th>
+                  <th>Ticket ID</th>
+                  <th>Task Name</th>
+                  <th>Date</th>
+                  <th>Target Date</th>
+                  <th>Status</th>
+                  <th>Description</th>
+                  <th>User Name</th>
+                </tr>
+              </thead>
+              <tbody>
+                <!-- "description": "Testing the application",
+            "duration": null,
+            "status": "Started",
+            "pseudoname": "Kiran",
+            "ticketid": "T24021300001",
+            "createddate": "2024-02-13 04:23",
+            "targetdate": "2024-02-14",
+            "ttime": null,
+            "todate": "2024-02-13",
+            "taskid": 1,
+            "fromdate": "2024-02-12",
+            "ftime": null,
+            "taskName": "Task Management Testing",
+            "trackid": 1,
+            "taskdescription": "Test Task Management module",
+            "fullname": null -->
+                <tr *ngFor="let data of dataArr let i=index">
+                  <td let i=index nowrap>{{ i+1}}</td>
+                  <td>
+                    <a style="cursor: pointer;color:#0d6efd" (click)="popup(data.taskid, data.ticketid)">{{data.ticketid}}</a>
+                  </td>
+                  <td>
+                    {{data.taskName}}
+                  </td>
+                  <td>
+                    {{data.createddate}}
+                  </td>
+                  <td>
+                    {{data.targetdate}}
+                  </td>
+                  <td>
+                    {{data.status}}
+                  </td>
+                  <td>{{data.description}}
+                  </td>
+                  <td>
+                    {{data.pseudoname}}
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </section>
+      </div>
+
+      <div class="paginator">
+        <!-- paginator -->
+        <!-- <mat-paginator (page)="handlePageEvent($event)" [length]="totalItems" [pageSize]="pageSize" [disabled]="false"
             [showFirstLastButtons]="showFirstLastButtons" [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
             [hidePageSize]="true" [pageIndex]="currentPageIndex" aria-label="Select page">
           </mat-paginator> -->
-        </div>
-  
-      </mat-card-content>
-    </mat-card>
-  
-  </div>
+      </div>
+
+    </mat-card-content>
+  </mat-card>
+
+</div>
