--- a/src/app/usit/components/Immigration/h1b-immigration/add-h1b-immigrant/add-h1b-immigrant.component.html
+++ b/src/app/usit/components/Immigration/h1b-immigration/add-h1b-immigrant/add-h1b-immigrant.component.html
@@ -9,7 +9,7 @@
 
 <mat-card class="center-card">
 
-    <form [formGroup]="h1bForm" (ngSubmit)="onSubmit()" class="h1b-form">
+    <form [formGroup]="h1bForm" class="h1b-form">
         <div class="form">
             <div class="form-column-left">
 
