--- a/src/app/usit/components/masters/qualification-list/add-qualification/add-qualification.component.html
+++ b/src/app/usit/components/masters/qualification-list/add-qualification/add-qualification.component.html
@@ -9,7 +9,7 @@
     </div>
   
     <div class="content" mat-dialog-content>
-      <form class="add-qualification-form" [formGroup]="qualificationForm" name="qualification-form" (ngSubmit)="onSubmit()">
+      <form class="add-qualification-form" [formGroup]="qualificationForm" name="qualification-form" >
         <input type="hidden" formControlName="id">
         <mat-form-field class="qualificationname-field">
           <mat-label>Qualification</mat-label>
