--- a/src/app/usit/components/quiz/attempt-quiz/attempt-quiz.component.html
+++ b/src/app/usit/components/quiz/attempt-quiz/attempt-quiz.component.html
@@ -9,7 +9,7 @@
   <mat-card-content class="card-content">
   <!-- form -->
   <div class="form-container">
-    <form [formGroup]="quizForm" class="quiz-form" autocomplete="off" (ngSubmit)="onSubmit()">
+    <form [formGroup]="quizForm" class="quiz-form" autocomplete="off" >
       <div  class="department-category-container">
         <div class="left-section">
           <mat-form-field appearance="fill" class="category-field">
