--- a/src/app/usit/components/recruitment/requirement-list/add-requirement/add-requirement.component.html
+++ b/src/app/usit/components/recruitment/requirement-list/add-requirement/add-requirement.component.html
@@ -8,7 +8,7 @@
 </div>
 <mat-card class="center-card">
 
-  <form [formGroup]="requirementForm" (ngSubmit)="onSubmit()" class="vendor-form" >
+  <form [formGroup]="requirementForm"  class="vendor-form" >
     <div class="form">
       <div class="form-column-left">
         <input type="hidden" name="maxnumber" formControlName="maxnumber">
