--- a/src/app/usit/components/technology-tag-list/add-technology-tag/add-technology-tag.component.html
+++ b/src/app/usit/components/technology-tag-list/add-technology-tag/add-technology-tag.component.html
@@ -8,7 +8,7 @@
     </div>
 
     <div class="content" mat-dialog-content>
-      <form class="add-technology-form" [formGroup]="technologyForm" name="technology-form" (ngSubmit)="onSubmit()">
+      <form class="add-technology-form" [formGroup]="technologyForm" name="technology-form">
         <input type="hidden" formControlName="id">
         <mat-form-field class="technologyname-field">
           <mat-label>Technology</mat-label>
