--- a/src/app/usit/components/vendor-management/recruiter-list/add-recruiter/add-recruiter.component.html
+++ b/src/app/usit/components/vendor-management/recruiter-list/add-recruiter/add-recruiter.component.html
@@ -7,7 +7,7 @@
   </button>
 </div>
 <mat-card class="center-card">
-  <form [formGroup]="recruiterForm" (ngSubmit)="onSubmit()" class="vendor-form">
+  <form [formGroup]="recruiterForm"  class="vendor-form">
     <div class="form">
       <div class="form-column-left">
         <!-- Company Name-->
