--- a/src/app/usit/components/vendor-management/vendor-list/add-vendor/add-vendor.component.html
+++ b/src/app/usit/components/vendor-management/vendor-list/add-vendor/add-vendor.component.html
@@ -11,7 +11,7 @@
 <!-- mat-card starts -->
   <mat-card  class="card" id="empCard">
     <!-- form- starts -->
-    <form [formGroup]="vendorForm" (ngSubmit)="onSubmit()" class="vendor-form" >
+    <form [formGroup]="vendorForm"  class="vendor-form" >
       <section class=form-container>
         <!-- form - left controls -->
         <div class="form-column-left">
