--- a/src/app/taskmodule/task-list/add-task/add-task.component.html
+++ b/src/app/taskmodule/task-list/add-task/add-task.component.html
@@ -7,7 +7,7 @@
     </button>
 </div>
 <mat-card class="center-card">
-    <form [formGroup]="requirementForm" (ngSubmit)="onSubmit()" class="vendor-form">
+    <form [formGroup]="requirementForm"  class="vendor-form">
         <div class="form">
             <div class="form-column-left">
                 <!-- Client -->
