--- a/src/app/taskmodule/task-list/task-update/task-update.component.html
+++ b/src/app/taskmodule/task-list/task-update/task-update.component.html
@@ -8,7 +8,7 @@
 </div>
 
 <mat-card class="center-card">
-    <form [formGroup]="form" (ngSubmit)="onSubmit()" class="vendor-form">
+    <form [formGroup]="form" class="vendor-form">
         <div class="form">
             <div class="form-column-right">
                 <mat-form-field appearance="fill">
