--- a/src/app/usit/components/masters/visa-list/add-visa/add-visa.component.html
+++ b/src/app/usit/components/masters/visa-list/add-visa/add-visa.component.html
@@ -8,7 +8,7 @@
   </div>
 
   <div class="content" mat-dialog-content>
-    <form class="add-visa-form" [formGroup]="visaForm" name="visa-form" (ngSubmit)="onSubmit()">
+    <form class="add-visa-form" [formGroup]="visaForm" name="visa-form" >
       <input type="hidden" formControlName="vid">
       <mat-form-field class="visaname-field">
         <mat-label>Visa Status</mat-label>
