--- a/src/app/usit/components/privilege-list/manage-privilege/manage-privilege.component.html
+++ b/src/app/usit/components/privilege-list/manage-privilege/manage-privilege.component.html
@@ -8,7 +8,7 @@
   </div>
 
   <div class="content" mat-dialog-content>
-    <form class="add-privilege-form" [formGroup]="form" name="privilege-form" (ngSubmit)="onSubmit()">
+    <form class="add-privilege-form" [formGroup]="form" name="privilege-form">
       <mat-form-field class="name-field">
         <mat-label>Type</mat-label>
         <input title="" matInput placeholder="Enter Type" formControlName="type">
