--- a/src/app/usit/components/dashboard/sourcingupdate/sourcingupdate.component.html
+++ b/src/app/usit/components/dashboard/sourcingupdate/sourcingupdate.component.html
@@ -1,30 +1,106 @@
-<div class="update-visa-dialog-container">
-    <div class="header">
-      <h2 mat-dialog-title>{{data.title}}</h2>
-      <hr>
-      <button mat-icon-button (click)="onAction('SAFE_CLOSE')">
-        <mat-icon>close</mat-icon>
-      </button>
-    </div>
-  
-    <div class="content" mat-dialog-content>
-      <form class="add-visa-form" [formGroup]="visaForm" name="visa-form" >
-        <input type="hidden" formControlName="vid">
-        <mat-form-field class="visaname-field">
-          <mat-label>Visa Status</mat-label>
-          <input matInput formControlName="visastatus" maxlength="15">
-          <mat-error class="error-message" *ngIf="controls['visastatus'].errors && controls['visastatus'].errors['required']">Visa Status is required</mat-error>
-        </mat-form-field>
-        <mat-form-field class="description-field">
-          <mat-label>Description</mat-label>
-          <textarea title="" maxlength="250" matInput
-            formControlName="description"></textarea>
-        </mat-form-field>
-      </form>
-  
-      <div class="actions">
-        <button mat-raised-button (click)="onAction('CANCEL')">{{data.buttonCancelText}}</button>
-        <button type="submit" mat-raised-button color="primary" (click)="onSubmit()">{{data.buttonSubmitText}}</button>
+<div class="header-container mat-elevation-z1">
+  <span class="header-text" mat-dialog-title>
+    {{ data.title }}
+  </span>
+  <button mat-icon-button (click)="onCancel()">
+    <mat-icon>close</mat-icon>
+  </button>
+</div>
+<mat-card class="center-card">
+  <div class="consultant-owner-names">
+    <div class="consultant-name">
+      <div class="consultant-name-div">
+        <span class="bold-text">Consultant Name:</span>
+        {{ data.souringData.candidate_name }}
       </div>
     </div>
+    <div class="owner-name">
+      <div class="owner-name-div">
+        <span class="bold-text">Owner Name:</span>
+        {{ data.souringData.pseudoname }}
+      </div>
+    </div>
+    <!-- <p>
+      <span class="bold-text">Consultant Name:</span>
+      {{ data.souringData.candidate_name }} <br />
+      <span class="bold-text">Owner Name:</span>
+      {{ data.souringData.pseudoname }}
+    </p> -->
   </div>
+
+  <form [formGroup]="sourcingForm" class="vendor-form">
+    <div class="form">
+      <div class="form-column-left">
+        <!-- <input type="hidden" formControlName="intrid" name="intrid" /> -->
+
+        <mat-form-field class="description-field">
+          <mat-label>Email</mat-label>
+          <input matInput formControlName="description" maxlength="15" />
+        </mat-form-field>
+
+        <mat-form-field class="description-field">
+          <mat-label>Contact Number</mat-label>
+          <input matInput formControlName="description" maxlength="15" />
+        </mat-form-field>
+      </div>
+
+      <div class="form-column-right">
+        <mat-form-field class="description-field">
+          <mat-label>Status</mat-label>
+          <mat-select formControlName="status">
+            <mat-option *ngFor="let opt of selectOptionObj.selectOptions.status" [value]="opt.value">{{ opt.value }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+
+        <mat-form-field appearance="fill">
+          <mat-label>Interview Date & Time</mat-label>
+          <input matInput type="datetime-local" formControlName="dateandtime" placeholder="DD/MM/YYYY" />
+          <mat-error *ngIf="sourcingForm.get('dateandtime')!.hasError('required')">
+            Date and Time is required</mat-error>
+        </mat-form-field>
+
+        
+      </div>
+
+    </div>
+    <div class="comments">
+      <div class="comments-inner">
+        <mat-form-field class="description-field">
+          <mat-label>Comments</mat-label>
+          <textarea matInput formControlName="comments" maxlength="1500"></textarea>
+        </mat-form-field>
+      </div>
+    </div>
+  </form>
+  <div class="form-button-right">
+    <button mat-raised-button color="white" (click)="onCancel()">Cancel</button>
+    <button mat-raised-button color="primary" [disabled]="isFormSubmitted" (click)="onSubmit()">
+      Submit
+    </button>
+  </div>
+</mat-card>
+
+<mat-card class="center-card">
+  <div>
+    <table class="table table-bordered table-responsive">
+      <thead class="thead-light sticky">
+        <tr>
+          <th>#</th>
+          <th>Status</th>
+        </tr>
+      </thead>
+      <tbody>
+        <ng-container *ngFor="let data of dataArr let i=index">
+          <tr>
+            <td let i=index nowrap>{{ i+1}}</td>
+            <td> {{data.status}} </td>
+          </tr>
+          <tr>
+            <td colspan="2"><b>Description: </b> {{data.description}}</td>
+          </tr>
+        </ng-container>
+      </tbody>
+    </table>
+  </div>
+  
+</mat-card>
