--- a/src/app/usit/components/dashboard/dashboard.component.html
+++ b/src/app/usit/components/dashboard/dashboard.component.html
@@ -152,7 +152,7 @@
               <ng-container matColumnDef="ContactNumber">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Contact Number">
                   Contact </th>
-                <td mat-cell *matCellDef="let element">{{element.personalcontactnumber}}</td>
+                <td mat-cell *matCellDef="let element">{{element.contactno}}</td>
               </ng-container>
 
               <!-- Owner Column -->
