--- a/src/app/usit/components/dashboard/sourcingupdate/sourcingupdate.component.scss
+++ b/src/app/usit/components/dashboard/sourcingupdate/sourcingupdate.component.scss
@@ -276,6 +276,7 @@ table {
   border-collapse: separate;
   border-spacing: 0;
   width: 100%;
+  overflow: auto;
 }
 
 table tr th,
@@ -337,6 +338,7 @@ table tr:last-child td:last-child {
 .consultant-owner-names {
   width: 100%;
   display: flex;
+  padding: 10px 0;
 }
 
 .consultant-name {
@@ -357,4 +359,106 @@ table tr:last-child td:last-child {
     justify-content: center;
     align-items: center;
   }
+}
+
+/**** TEL INPUT   - STARTS ****/
+.country-selector {
+  opacity: 1 !important;
+  bottom: 8px !important;
+}
+
+input:not(.country-search) {
+  bottom: 3px;
+  left: 10px;
+}
+
+::ng-deep input .country-search {
+  width: 90%;
+  /* height: 34px; */
+  border: none;
+  border-bottom: 1px solid #f2f0f0;
+  font-size: 14px;
+  padding: 10px 10px !important;
+}
+
+.country-list-button {
+  font-size: 0.8rem !important;
+}
+
+.mat-mdc-menu-content:not(:empty) {
+  max-height: 250px !important;
+}
+
+mat-mdc-menu-content {
+  max-height: 250px !important;
+}
+
+::ng-deep .custom-intl-input .mat-mdc-menu-panel .ngx-mat-tel-input-mat-menu-panel {
+  max-height: 250px !important;
+}
+
+::ng-deep .intl-input .mdc-button .mdc-button__label {
+  margin-top: 15px;
+}
+
+::ng-deep .ngx-mat-tel-input-mat-menu-panel {
+  max-height: 280px !important;
+}
+
+::ng-deep .country-search {
+  width: calc(100% - 10px) !important;
+  padding: 4px !important;
+}
+
+::ng-deep .country-list-button {
+  padding: 0px 4px !important;
+}
+/**** TEL INPUT   - ENDS ****/
+
+@media screen and (min-width: 1000px) and (max-width: 1200px) {
+  .center-card {
+    height: 45vh;
+  }
+}
+
+@media screen and (min-width: 1200px) and (max-width: 1600px) {
+  .center-card {
+    height: 44vh;
+  }
+}
+
+@media screen and (min-width: 1600px) and (max-width: 1800px) {
+  .center-card {
+    height: 37vh;
+  }
+}
+
+@media screen and (min-width: 1800px) and (max-width: 2000px) {
+  .center-card {
+    height: 42vh;
+  }
+}
+
+@media screen and (min-width: 2000px) {
+  .center-card {
+    height: 35vh;
+  }
+}
+
+.header-text {
+  padding-left: 8px;
+  font-weight: 600;
+}
+
+.header-container-leading-resources {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  height: 48px;
+  padding: 0px;
+  z-index: 99999;
+  top: 0;
+  overflow: hidden;
+  background-color: white;
 }
