--- a/src/app/usit/components/dashboard/sourcingupdate/sourcingupdate.component.html
+++ b/src/app/usit/components/dashboard/sourcingupdate/sourcingupdate.component.html
@@ -17,17 +17,13 @@
   <form [formGroup]="sourcingForm" class="vendor-form">
     <div class="form">
       <div class="form-column-left">
-        <!-- <input type="hidden" formControlName="intrid" name="intrid" /> -->
         <mat-form-field class="description-field">
           <mat-label>Email</mat-label>
           <input matInput formControlName="email" maxlength="100" />
+          <mat-error *ngIf="sourcingForm.get('email')?.invalid && (sourcingForm.get('email')?.dirty || sourcingForm.get('email')?.touched) && sourcingForm.get('email')?.hasError('email')">Enter Valid email
+            address</mat-error>
         </mat-form-field>
 
-        <!-- <mat-form-field class="description-field">
-          <mat-label>Contact Number</mat-label>
-          <input matInput formControlName="contactno" maxlength="15" />
-        </mat-form-field> -->
-        
         <mat-form-field appearance="fill">
         <mat-label>Contact Number</mat-label>
         <ngx-mat-intl-tel-input [preferredCountries]="['in','us']" class="intl-input"
@@ -49,8 +45,6 @@
         <mat-form-field appearance="fill">
           <mat-label>Appointment Date</mat-label>
           <input matInput type="datetime-local" formControlName="appointmentdate" placeholder="DD/MM/YYYY" />
-          <!-- <mat-error *ngIf="sourcingForm.get('appointmentdate')!.hasError('required')">
-            Date and Time is required</mat-error> -->
         </mat-form-field>
 
         
@@ -62,6 +56,7 @@
         <mat-form-field class="description-field">
           <mat-label>Comments</mat-label>
           <textarea matInput formControlName="comments" maxlength="1500"></textarea>
+          <mat-error *ngIf="sourcingForm.get('comments')?.hasError('required')"> Comments are required</mat-error>
         </mat-form-field>
       </div>
     </div>
@@ -97,7 +92,7 @@
             <td> {{data.appointmentdate}} </td>
           </tr>
           <tr>
-            <td colspan="3"><b>Comments: </b> {{data.comments}}</td>
+            <td colspan="3" ><span class="bold-text">Comments:</span>{{data.comments}}</td>
           </tr>
         </ng-container>
       </tbody>
