--- a/src/app/usit/components/recruitment/requirement-list/requirement-list.component.html
+++ b/src/app/usit/components/recruitment/requirement-list/requirement-list.component.html
@@ -40,7 +40,6 @@
           <th
             mat-header-cell
             *matHeaderCellDef
-            mat-sort-header
             sortActionDescription="Sort by Serial Number"
           >
             #
@@ -52,19 +51,18 @@
           <th
             mat-header-cell
             *matHeaderCellDef
-            mat-sort-header
             sortActionDescription="Sort by RequirementNumber"
           >
             Requirement Number
           </th>
           <td mat-cell *matCellDef="let element" class="req-info" (click)="goToReqInfo(element)">{{ element?.reqnumber }}</td>
         </ng-container>
-        <!-- Date-->
+        <!-- Date  mat-sort-header-->
         <ng-container matColumnDef="Date">
           <th
             mat-header-cell
             *matHeaderCellDef
-            mat-sort-header
+           
             sortActionDescription="Sort by Date"
           >
             Date
@@ -76,7 +74,7 @@
           <th
             mat-header-cell
             *matHeaderCellDef
-            mat-sort-header
+            
             sortActionDescription="Sort by JobTitle"
           >
             Job Title
@@ -99,7 +97,7 @@
           <th
             mat-header-cell
             *matHeaderCellDef
-            mat-sort-header
+            
             sortActionDescription="Sort by IPVendor"
           >
             IP/Vendor
@@ -111,7 +109,7 @@
           <th
             mat-header-cell
             *matHeaderCellDef
-            mat-sort-header
+           
             sortActionDescription="Sort by EmployementType"
           >
             Employement Type
@@ -126,7 +124,7 @@
           <th
             mat-header-cell
             *matHeaderCellDef
-            mat-sort-header
+           
             sortActionDescription="Sort by Status"
           >
             Status
@@ -166,7 +164,7 @@
           <th
             mat-header-cell
             *matHeaderCellDef
-            mat-sort-header
+            
             sortActionDescription="Sort by Approve/Reject"
           >
             Approve/Reject
