--- a/src/app/usit/components/sales/consultant-list/consultant-list.component.html
+++ b/src/app/usit/components/sales/consultant-list/consultant-list.component.html
@@ -32,21 +32,21 @@
         <!--- Note that these columns can be defined in any order.
               The actual rendered columns are set as a property on the row definition" -->
 
-        <!-- SNo Column -->
+        <!-- SNo Column  mat-sort-header-->
         <ng-container matColumnDef="SerialNum">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header
+          <th mat-header-cell *matHeaderCellDef
             sortActionDescription="Sort by Serial Number"> # </th>
           <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
         </ng-container>
         <!-- Date-->
         <ng-container matColumnDef="Date">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header
+          <th mat-header-cell *matHeaderCellDef 
             sortActionDescription="Sort by Date"> Date </th>
-          <td mat-cell *matCellDef="let element"> {{element?.createddate}} </td>
+          <td mat-cell *matCellDef="let element"> {{element?.createddate | date:'yyyy-MM-dd'}} </td>
         </ng-container>
         <!-- ID-->
         <ng-container matColumnDef="Id">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header
+          <th mat-header-cell *matHeaderCellDef 
             sortActionDescription="Sort by ID"> ID </th>
           <td mat-cell *matCellDef="let element">
             <!-- {{element?.consultantno}} -->
@@ -57,7 +57,7 @@
         </ng-container>
         <!-- Name-->
         <ng-container matColumnDef="Name">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header
+          <th mat-header-cell *matHeaderCellDef 
             sortActionDescription="Sort byName">Name </th>
           <td mat-cell *matCellDef="let element">
             <span class="consultant-id"
@@ -79,14 +79,14 @@
           </ng-container> -->
           <!-- Email-->
           <ng-container matColumnDef="Email">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header
+            <th mat-header-cell *matHeaderCellDef 
               sortActionDescription="Sort by Email"> Email</th>
             <td mat-cell *matCellDef="let element"> {{element?.consultantemail}}
             </td>
           </ng-container>
           <!-- Contact Number-->
           <ng-container matColumnDef="ContactNumber">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header
+            <th mat-header-cell *matHeaderCellDef 
               sortActionDescription="Sort by Contact Number">
               ContactNumber </th>
             <td mat-cell *matCellDef="let element"> {{element?.contactnumber}}
@@ -94,14 +94,14 @@
           </ng-container>
           <!-- Visa-->
           <ng-container matColumnDef="Visa">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header
+            <th mat-header-cell *matHeaderCellDef
               sortActionDescription="Sort by Visa"> Visa</th>
             <td mat-cell *matCellDef="let element"> {{element?.visa_status}}
             </td>
           </ng-container>
           <!-- Current Location -->
           <ng-container matColumnDef="CurrentLocation">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header
+            <th mat-header-cell *matHeaderCellDef 
               sortActionDescription="Sort by Current Location">Current
               Location </th>
             <td mat-cell *matCellDef="let element"> {{element?.currentlocation}}
@@ -109,21 +109,21 @@
           </ng-container>
           <!-- Company Column -->
           <ng-container matColumnDef="Company">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header
+            <th mat-header-cell *matHeaderCellDef 
               sortActionDescription="Sort by Company"> Company</th>
             <td mat-cell *matCellDef="let element"> {{element.companyname}}
             </td>
           </ng-container>
           <!-- Position Column -->
           <ng-container matColumnDef="Position">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header
+            <th mat-header-cell *matHeaderCellDef 
               sortActionDescription="Sort by Position"> Position</th>
             <td mat-cell *matCellDef="let element"> {{element.position}} </td>
           </ng-container>
 
           <!-- Exp Column -->
           <ng-container matColumnDef="Experience">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header
+            <th mat-header-cell *matHeaderCellDef 
               sortActionDescription="Sort by Experience"> Experience
             </th>
             <td mat-cell *matCellDef="let element"> {{element.experience}} </td>
@@ -131,7 +131,7 @@
 
           <!-- Relocation Column -->
           <ng-container matColumnDef="Relocation">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header
+            <th mat-header-cell *matHeaderCellDef 
               sortActionDescription="Sort by Relocation"> Relocation
             </th>
             <td mat-cell *matCellDef="let element"> {{element.relocation}} </td>
@@ -139,7 +139,7 @@
 
           <!-- RAte Column -->
           <ng-container matColumnDef="Rate">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header
+            <th mat-header-cell *matHeaderCellDef 
               sortActionDescription="Sort by Rate"> Rate </th>
             <td mat-cell *matCellDef="let element"> {{element.hourlyrate}}</td>
           </ng-container>
@@ -147,7 +147,7 @@
           <!-- Added By -->
 
           <ng-container matColumnDef="AddedBy" *ngIf="(flag.toLocaleLowerCase() != 'sales')">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Added By">Added By</th>
+            <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Added By">Added By</th>
             <td mat-cell *matCellDef="let element">
               <ng-container
                 *ngIf="element.consultantflg === 'sales' || element.consultantflg === 'presales'; then salesOrPreSales else recruiting"></ng-container>
@@ -163,14 +163,14 @@
           </ng-container>
           <!-- Priority Column -->
           <ng-container matColumnDef="Priority">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header
+            <th mat-header-cell *matHeaderCellDef 
               sortActionDescription="Sort by Priority">Priority </th>
             <td mat-cell *matCellDef="let element"> {{element.priority}} </td>
           </ng-container>
 
           <!-- Status Column -->
           <ng-container matColumnDef="Status">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header
+            <th mat-header-cell *matHeaderCellDef 
               sortActionDescription="Sort by Status"> Status </th>
             <td mat-cell *matCellDef="let consultant">
               <!-- <span><button mat-raised-button (click)="onStatusUpdate(consultant)" > {{consultant.status}}</button> </span> -->
