--- a/src/app/usit/components/tech-support-list/tech-support-list.component.html
+++ b/src/app/usit/components/tech-support-list/tech-support-list.component.html
@@ -26,15 +26,15 @@
         <table mat-table [dataSource]="dataSource" matSort (matSortChange)="onSort($event)" class="responsive-table">
   
   
-          <!-- serial Number Column -->
+          <!-- serial Number Column mat-sort-header-->
           <ng-container matColumnDef="SerialNum">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number"> # </th>
+            <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Serial Number"> # </th>
             <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
           </ng-container>
   
           <!-- Name Column -->
           <ng-container matColumnDef="Name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Name"> Name </th>
+            <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Name"> Name </th>
             <td mat-cell *matCellDef="let element">
               <span class="user-info" (click)="goToUserInfo(element.userid)">
                 {{element.name}}
@@ -53,34 +53,34 @@
   
           <!-- Email Column -->
           <ng-container matColumnDef="Experience">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Experience"> Experience
+            <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Experience"> Experience
             </th>
             <td mat-cell *matCellDef="let element"> {{element.experience}} </td>
           </ng-container>
   
           <!-- Personal/Comp Number Column -->
           <ng-container matColumnDef="Technology">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Technology">
+            <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Technology">
               Technology </th>
             <td mat-cell *matCellDef="let element"> {{element.technology}} </td>
           </ng-container>
   
           <!-- Designation Column -->
           <ng-container matColumnDef="Skills">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Skills">Skills
+            <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Skills">Skills
             </th>
             <td mat-cell *matCellDef="let element"> {{element.skills}} </td>
           </ng-container>
   
           <!-- Department Column -->
           <ng-container matColumnDef="Email">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Department"> Email
+            <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Department"> Email
             </th>
             <td mat-cell *matCellDef="let element"> {{element.email}} </td>
           </ng-container>
   
           <ng-container matColumnDef="ContactNumber">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by ContactNumber">
+            <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by ContactNumber">
               ContactNumber </th>
             <td mat-cell *matCellDef="let element">
               <span *ngIf="element.mobile != null">{{element.mobile}}</span>
