--- a/src/app/usit/components/technology-tag-list/technology-tag-list.component.html
+++ b/src/app/usit/components/technology-tag-list/technology-tag-list.component.html
@@ -25,21 +25,21 @@
 
         <!--- Note that these columns can be defined in any order.
               The actual rendered columns are set as a property on the row definition" -->
-        <!-- Serial Number Column -->
+        <!-- Serial Number Column mat-sort-header-->
         <ng-container matColumnDef="SerialNum">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by SerialNum"> # </th>
+          <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by SerialNum"> # </th>
           <td mat-cell *matCellDef="let element"> {{ element.serialNum }} </td>
         </ng-container>
 
         <!-- Technology Column -->
         <ng-container matColumnDef="Technology">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Technology"> Technology </th>
+          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Technology"> Technology </th>
           <td mat-cell *matCellDef="let element"> {{ element.technologyarea }} </td>
         </ng-container>
 
         <!-- Skills Column -->
         <ng-container matColumnDef="Skills">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Company"> Skills </th>
+            <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Company"> Skills </th>
             <td mat-cell *matCellDef="let element"> {{ element.listofkeyword }} </td>
           </ng-container>
 
