--- a/src/app/usit/components/vendor-management/vendor-list/vendor-list.component.html
+++ b/src/app/usit/components/vendor-management/vendor-list/vendor-list.component.html
@@ -37,23 +37,23 @@
         <!--- Note that these columns can be defined in any order.
               The actual rendered columns are set as a property on the row definition" -->
 
-        <!-- ID Column -->
+        <!-- ID Column mat-sort-header sortActionDescription="Sort by Serial Number"-->
         <ng-container matColumnDef="SerialNum">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number"> # </th>
+          <th mat-header-cell *matHeaderCellDef > # </th>
           <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
         </ng-container>
 
-        <!-- Company Column -->
+        <!-- Company Column mat-sort-header sortActionDescription="Sort by Company"-->
         <ng-container matColumnDef="Company">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Company"> Company</th>
+          <th mat-header-cell *matHeaderCellDef > Company</th>
           <td mat-cell *matCellDef="let element">
             <span class="company-recruiter-info" (click)="goToCompanyRecInfo(element)"> {{element.company}}</span>
           </td>
         </ng-container>
 
-        <!-- HeadQuarter Column -->
+        <!-- HeadQuarter Column mat-sort-header sortActionDescription="Sort by Head Quarter"-->
         <ng-container matColumnDef="HeadQuarter">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Head Quarter"> Head
+          <th mat-header-cell *matHeaderCellDef > Head
             Quarter </th>
           <td mat-cell *matCellDef="let element"> {{element.headquerter}} </td>
         </ng-container>
@@ -64,23 +64,23 @@
           <td mat-cell *matCellDef="let element"> {{element.fedid}} </td>
         </ng-container> -->
 
-        <!-- VendorType Column -->
+        <!-- VendorType Column mat-sort-header  -->
         <ng-container matColumnDef="VendorType">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by VendorType"> Vendor Type
+          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by VendorType"> Vendor Type
           </th>
           <td mat-cell *matCellDef="let element"> {{element.vendortype}} </td>
         </ng-container>
 
         <!-- TierType Column -->
         <ng-container matColumnDef="TierType">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Tier Type"> Tier Type
+          <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Tier Type"> Tier Type
           </th>
           <td mat-cell *matCellDef="let element" > {{element.tyretype}} </td>
         </ng-container>
 
         <!-- AddedBy Column -->
         <ng-container matColumnDef="AddedBy">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by AddedBy"> Added By </th>
+          <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by AddedBy"> Added By </th>
           <td mat-cell *matCellDef="let element">
             <span class="user-info" (click)="goToUserInfo(element.addedby)" > {{element.pseudoname}}  </span>
           </td>
@@ -88,15 +88,15 @@
 
         <!-- AddedOn Column -->
         <ng-container matColumnDef="AddedOn">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by AddedOn"> Added On </th>
-          <td mat-cell *matCellDef="let element"> {{element.createddate}} </td>
+          <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by AddedOn"> Added On </th>
+          <td mat-cell *matCellDef="let element"> {{element.createddate | date:'yyyy-MM-dd'}} </td>
         </ng-container>
 
         <!-- LastUpdated Column -->
         <ng-container matColumnDef="LastUpdated">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Last Updated"> Last
+          <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Last Updated"> Last
             Updated </th>
-          <td mat-cell *matCellDef="let element"> {{element.updateddate}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.updateddate  | date:'yyyy-MM-dd'}} </td>
         </ng-container>
 
         <!-- Status Column -->
@@ -136,7 +136,7 @@
 
         <!-- Approve/Reject Column -->
         <ng-container matColumnDef="ApproveOrReject">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by ApproveOrReject">
+          <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by ApproveOrReject">
             Approve/Reject </th>
           <td mat-cell *matCellDef="let vendor" class="approve-buttons">
             <ng-container *ngIf="['Approved'].includes(vendor.vms_stat);  else ifNotApproved">
