--- a/src/app/usit/components/sales/consultant-list/add-consultant/add-consultant.component.html
+++ b/src/app/usit/components/sales/consultant-list/add-consultant/add-consultant.component.html
@@ -22,7 +22,7 @@
         <!-- First Name -->
         <mat-form-field appearance="fill">
           <mat-label>First Name</mat-label>
-          <input matInput formControlName="firstname" maxlength="50">
+          <input matInput formControlName="firstname" maxlength="50" (input)="camelCase($event)">
           <mat-error *ngIf="consultantForm.get('firstname').hasError('required')">First
             Name is required</mat-error>
           <mat-error *ngIf="consultantForm.get('firstname').hasError('minlength')">First
@@ -36,7 +36,7 @@
         <!-- last Name -->
         <mat-form-field appearance="fill">
           <mat-label>Last Name</mat-label>
-          <input matInput formControlName="lastname" maxlength="35">
+          <input matInput formControlName="lastname" maxlength="35"  (input)="camelCase($event)">
           <mat-error *ngIf="consultantForm.get('lastname').hasError('required')">Last
             Name is required</mat-error>
         </mat-form-field>
@@ -44,7 +44,7 @@
         <!-- consulatant Email -->
         <mat-form-field appearance="fill">
           <mat-label>Email</mat-label>
-          <input matInput formControlName="consultantemail" maxlength="50" (change)="emailDuplicate($event)">
+          <input matInput formControlName="consultantemail" maxlength="50" (change)="emailDuplicate($event)" (input)="convertToLowerCase($event)">
           <mat-error *ngIf="consultantForm.get('consultantemail')!.hasError('required')">Email
             is
             required</mat-error>
@@ -75,7 +75,7 @@
         <mat-form-field appearance="fill">
           <mat-label>Project Availability</mat-label>
           <input matInput formControlName="projectavailabity" placeholder="Project Availability (In days)"
-            maxlength="3">
+            maxlength="3"  (keypress)="onlyNumberKey($event)" >
           <mat-error *ngIf="consultantForm.get('projectavailabity').hasError('required')">Project Availability is
             required</mat-error>
           <mat-error *ngIf="consultantForm.get('projectavailabity').hasError('pattern')">
@@ -148,7 +148,7 @@
         <!-- Position *ngIf="flag !== 'Recruiting' && flag !== 'sales'" -->
         <mat-form-field appearance="fill">
           <mat-label>Position</mat-label>
-          <input matInput formControlName="position" placeholder="Position" maxlength="30">
+          <input matInput formControlName="position" placeholder="Position" maxlength="30" (input)="camelCase($event)">
           <mat-error *ngIf="consultantForm.get('position')!.hasError('required')">Position
             is required</mat-error>
         </mat-form-field>
@@ -178,7 +178,7 @@
         <!-- Total Exp  -->
         <mat-form-field appearance="fill">
           <mat-label>Total Experience</mat-label>
-          <input matInput formControlName="experience" placeholder="Total Experience" maxlength="2">
+          <input matInput formControlName="experience" placeholder="Total Experience" maxlength="2" (keypress)="onlyNumberKey($event)" >
           <mat-error *ngIf="consultantForm.get('experience')!.hasError('required')">Experience
             is required</mat-error>
           <mat-error *ngIf="consultantForm.get('experience')!.hasError('pattern')">Enter only number</mat-error>
@@ -299,7 +299,7 @@
         <!-- YOP -->
         <mat-form-field appearance="fill">
           <mat-label>Year of Passing</mat-label>
-          <input matInput formControlName="yop" maxlength="4">
+          <input matInput formControlName="yop" maxlength="4" (keypress)="onlyNumberKey($event)" >
         </mat-form-field>
       </div>
     </div>
@@ -312,13 +312,13 @@
         <!-- Ref Person Name -->
         <mat-form-field appearance="fill">
           <mat-label>Reference Person Name</mat-label>
-          <input matInput formControlName="emprefname" maxlength="30">
+          <input matInput formControlName="emprefname" maxlength="30" (input)="camelCase($event)">
 
         </mat-form-field>
         <!-- Ref Email -->
         <mat-form-field appearance="fill">
           <mat-label>Email</mat-label>
-          <input matInput formControlName="emprefemail" maxlength="25">
+          <input matInput formControlName="emprefemail" maxlength="40" (input)="convertToLowerCase($event)">
           <!-- <mat-error *ngIf="consultantForm.get('emprefemail')!.hasError('required')">Email
             is
             required</mat-error>
@@ -374,7 +374,7 @@
         <!-- Reference Name-->
         <mat-form-field appearance="fill">
           <mat-label>Reference Name</mat-label>
-          <input matInput formControlName="refname" maxlength="30">
+          <input matInput formControlName="refname" maxlength="30" (input)="camelCase($event)">
 
         </mat-form-field>
       </div>
@@ -382,7 +382,7 @@
         <!-- Reference EMail-->
         <mat-form-field appearance="fill">
           <mat-label>Reference Email</mat-label>
-          <input matInput formControlName="refemail" maxlength="20">
+          <input matInput formControlName="refemail" maxlength="40" (input)="convertToLowerCase($event)">
           <!-- <mat-error *ngIf="consultantForm.get('refemail')!.hasError('required')">Email
             is
             required</mat-error>
