--- a/src/app/usit/components/sales/submission-list/add-submission/add-submission.component.html
+++ b/src/app/usit/components/sales/submission-list/add-submission/add-submission.component.html
@@ -63,7 +63,7 @@
 
                 <mat-form-field appearance="fill">
                     <mat-label>Position Title</mat-label>
-                    <input matInput formControlName="position" maxlength="25">
+                    <input matInput formControlName="position" maxlength="150" (input)="camelCase($event)">
                     <mat-error *ngIf="submissionForm.get('position')!.hasError('required')"> Position Title is required</mat-error>
                 </mat-form-field>
 
@@ -91,12 +91,12 @@
             <div class="form-column-right">
                 <mat-form-field appearance="fill">
                     <mat-label>End Client</mat-label>
-                    <input matInput formControlName="endclient" maxlength="60">
+                    <input matInput formControlName="endclient" maxlength="60" (input)="camelCase($event)">
                 </mat-form-field>
 
                 <mat-form-field appearance="fill">
                     <mat-label>Implementation Partner</mat-label>
-                    <input matInput formControlName="implpartner" maxlength="120">
+                    <input matInput formControlName="implpartner" maxlength="120" (input)="camelCase($event)">
                 </mat-form-field>
 
                 <div class="fg-div">
@@ -133,12 +133,12 @@
 
                 <mat-form-field appearance="fill">
                     <mat-label>Contact Number</mat-label>
-                    <input matInput formControlName="empcontact" max-length="15" />
+                    <input matInput formControlName="empcontact" maxlength="15" readonly/>
                 </mat-form-field>
 
                 <mat-form-field appearance="fill">
                     <mat-label>Email</mat-label>
-                    <input matInput formControlName="empmail" max-length="50" />
+                    <input matInput formControlName="empmail" maxlength="50" readonly/>
                     <mat-error *ngIf="submissionForm.get('empmail')!.hasError('required')">Email is required</mat-error>
                     <mat-error *ngIf="submissionForm.get('empmail')!.hasError('pattern')">Invalid Email Address</mat-error>
                 </mat-form-field>
