dashboard, add-employee and add-submission consultant autocomplete

--- a/src/app/usit/components/employee-list/add-employee/add-employee.component.html
+++ b/src/app/usit/components/employee-list/add-employee/add-employee.component.html
@@ -17,7 +17,7 @@
         <!-- Full Name -->
         <mat-form-field appearance="fill">
           <mat-label>Full Name</mat-label>
-          <input matInput formControlName="fullname" maxlength="50">
+          <input matInput formControlName="fullname" maxlength="50" (input)="camelCase($event)">
           <mat-error *ngIf="employeeForm.get('fullname').hasError('required')">Full
             Name is required</mat-error>
           <mat-error *ngIf="employeeForm.get('fullname').hasError('minlength')">Full Name must be at least 6
@@ -28,14 +28,14 @@
         <!-- Psuedo Name -->
         <mat-form-field appearance="fill">
           <mat-label>Psuedo Name</mat-label>
-          <input matInput formControlName="pseudoname" maxlength="15">
+          <input matInput formControlName="pseudoname" maxlength="15" (input)="camelCase($event)">
           <mat-error *ngIf="employeeForm.get('pseudoname').hasError('required')">Psuedo
             Name is required</mat-error>
         </mat-form-field>
         <!-- Official Email -->
         <mat-form-field appearance="fill">
           <mat-label>Official Email</mat-label>
-          <input matInput formControlName="email" maxlength="50">
+          <input matInput formControlName="email" maxlength="50" (input)="convertToLowerCase($event)">
           <mat-error *ngIf="employeeForm.get('email')!.hasError('required')">Email is
             required</mat-error>
           <mat-error *ngIf="employeeForm.get('email')!.hasError('email')">Invalid email
@@ -44,7 +44,7 @@
         <!-- Personal Email -->
         <mat-form-field appearance="fill">
           <mat-label>Personal Email</mat-label>
-          <input matInput formControlName="personalemail" maxlength="50">
+          <input matInput formControlName="personalemail" maxlength="50" (input)="convertToLowerCase($event)">
           <mat-error *ngIf="employeeForm.get('personalemail').hasError('required')">Email
             is required</mat-error>
           <mat-error *ngIf="employeeForm.get('personalemail').hasError('email')">Invalid
@@ -56,7 +56,7 @@
           <!-- <input matInput formControlName="personalcontactnumber"> -->
           <ngx-mat-intl-tel-input class="intl-input" [preferredCountries]="['in','us']"
             formControlName="personalcontactnumber" [enablePlaceholder]="true" [enableSearch]="true"
-            name="personalcontactnumber" id="intlInput" #personalcontactnumber #pNumb>
+            name="personalcontactnumber" id="intlInput" #personalcontactnumber #pNumb (keypress)="onlyNumberKey($event)">
           </ngx-mat-intl-tel-input>
           <mat-error *ngIf="employeeForm.get('personalcontactnumber').hasError('required')">Personal
             Contact
@@ -68,7 +68,7 @@
           <!-- <input matInput formControlName="companycontactnumber"> -->
           <ngx-mat-intl-tel-input [preferredCountries]="['in','us']" class="intl-input"
             formControlName="companycontactnumber" [enablePlaceholder]="true" [enableSearch]="true"
-            name="companycontactnumber" id="intlInputCompany" #companycontactnumber>
+            name="companycontactnumber" id="intlInputCompany" #companycontactnumber (keypress)="onlyNumberKey($event)">
           </ngx-mat-intl-tel-input>
         </mat-form-field>
         <!-- Joining Date -->
@@ -124,7 +124,7 @@
         <!-- BANK -->
         <mat-form-field appearance="fill" *ngIf="showOtherDetails">
           <mat-label>Bank Name</mat-label>
-          <input matInput formControlName="bankname" maxlength="100">
+          <input matInput formControlName="bankname" maxlength="100" (input)="camelCase($event)">
           <mat-error *ngIf="employeeForm.get('bankname').hasError('required')">Bank Name is required</mat-error>
         </mat-form-field>
         <!-- AC NUMBER -->
@@ -143,13 +143,13 @@
         <!-- Branch -->
         <mat-form-field appearance="fill" *ngIf="showOtherDetails">
           <mat-label>Branch Name</mat-label>
-          <input matInput formControlName="branch" maxlength="50">
+          <input matInput formControlName="branch" maxlength="50" (input)="camelCase($event)">
           <mat-error *ngIf="employeeForm.get('branch').hasError('required')">Branch Name is required</mat-error>
         </mat-form-field>
         <!-- Designation -->
         <mat-form-field appearance="fill">
           <mat-label>Designation</mat-label>
-          <input matInput formControlName="designation" maxlength="25">
+          <input matInput formControlName="designation" maxlength="25" (input)="camelCase($event)">
         </mat-form-field>
         <!--Select Department -->
         <mat-form-field appearance="fill">
