--- a/src/app/usit/components/sales/consultant-list/consultant-info/consultant-info.component.html
+++ b/src/app/usit/components/sales/consultant-list/consultant-info/consultant-info.component.html
@@ -39,6 +39,12 @@
                   </tr>
                   <tr>
                     <td style="width: 43%">
+                      <span class="table-header-text">Consultant No</span>
+                    </td>
+                    <td>{{ entity.consultantno}}</td>
+                  </tr>
+                  <tr>
+                    <td style="width: 43%">
                       <span class="table-header-text">Email</span>
                     </td>
                     <td>{{ entity.consultantemail}}</td>
@@ -51,7 +57,7 @@
                   </tr>
                   <tr>
                     <td><span class="table-header-text">Linked In</span></td>
-                    <td><a href="https://www.linkedin.com/in/{{entity.linkedin}}"
+                    <td><a href="{{entity.linkedin}}"
                       target="_blank">{{entity.linkedin}}</a></td>
                   </tr>
                   <tr>
