--- a/src/app/taskmodule/task-list/task-list.component.html
+++ b/src/app/taskmodule/task-list/task-list.component.html
@@ -26,39 +26,39 @@
         <section class="mat-elevation-z8 interview-table-style">
             <table mat-table [dataSource]="dataSource" matSort (matSortChange)="onSort($event)" oncopy="return false">
                 <ng-container matColumnDef="SerialNum">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by SerialNum"> #
+                    <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by SerialNum"> S No
                     </th>
                     <td mat-cell *matCellDef="let element"> {{ element.serialNum }} </td>
                 </ng-container>
                 <ng-container matColumnDef="ticketid">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Company">
+                    <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Company">
                         Ticket ID </th>
                     <td mat-cell *matCellDef="let element" ><a style="cursor: pointer;color:#0d6efd" (click)="popup(element.taskid, element.ticketid)">{{ element.ticketid }} </a> </td>
                 </ng-container>
                 <ng-container matColumnDef="taskname">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Company"> Task
+                    <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Company"> Task
                         Name </th>
                     <td mat-cell *matCellDef="let element"> {{ element.taskname }} </td>
                 </ng-container>
                 <ng-container matColumnDef="description">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Company">
+                    <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Company">
                         Description </th>
                     <td mat-cell *matCellDef="let element"> <span matTooltip="{{ element.description }}">{{
                             element.description }}</span> </td>
                 </ng-container>
                 <ng-container matColumnDef="targetdate">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Company">
+                    <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Company">
                         Target Date </th>
                     <td mat-cell *matCellDef="let element"> {{ element.targetdate }} </td>
                 </ng-container>
                 <ng-container matColumnDef="status">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Company">
+                    <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Company">
                         Status</th>
                     <td mat-cell *matCellDef="let element"> {{ element.status }} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="update">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Company">
+                    <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Company">
                         Update</th>
                     <td mat-cell *matCellDef="let element"> 
                         <ng-container *ngFor="let data1 of element.assignedto">
