--- a/src/app/taskmodule/task-list/task-update/task-update.component.scss
+++ b/src/app/taskmodule/task-list/task-update/task-update.component.scss
@@ -151,7 +151,7 @@
   
   .vendor-form{
     height: 75vh;
-    overflow: auto;
+    // overflow: auto;
   }
   
   .anchor-link {
@@ -389,7 +389,7 @@
   .interview-table-style {
     padding: 0 2px;
     width: max-content;
-    max-height: calc(100% - 3px);
+    max-height: calc(100% - 2px);
     overflow: auto;
     display: block;
   }
@@ -467,7 +467,7 @@
   @media screen and (min-width: 1500px) {
     .interview-table-style {
       width: 100%;
-      height: calc(100% - 8px);
+      height: calc(100% - 2px);
       overflow: auto;
     }
   }
@@ -522,4 +522,59 @@
   .employeer-name {
     cursor: pointer;
     color: #0275d8;
+  }
+
+  table {
+    border-collapse: separate;
+    border-spacing: 0;
+    width: 100%;
+    overflow: auto;
+  }
+  
+  table tr th,
+  table tr td {
+    border-right: 1px solid #bbb;
+    border-bottom: 1px solid #bbb;
+    padding: 5px;
+  }
+  
+  table tr th:first-child,
+  table tr td:first-child {
+    border-left: 1px solid #bbb;
+  }
+  
+  table tr th {
+    background: #d5e7e7;
+    border-top: 1px solid #bbb;
+    text-align: left;
+  }
+  
+  table tr:first-child th:first-child {
+    border-top-left-radius: 6px;
+  }
+  
+  table tr:first-child th:last-child {
+    border-top-right-radius: 6px;
+  }
+  
+  table tr:last-child td:first-child {
+    border-bottom-left-radius: 6px;
+  }
+  
+  table tr:last-child td:last-child {
+    border-bottom-right-radius: 6px;
+  }
+  
+  .sticky {
+    position: sticky;
+    top: 0;
+  }
+  
+  .bold-text {
+    font-weight: bold;
+  }
+
+  .table-container {
+    height: 70vh;
+    overflow: auto;
   }
