--- a/src/app/usit/components/dashboard/dashboard.component.html
+++ b/src/app/usit/components/dashboard/dashboard.component.html
@@ -2,11 +2,11 @@
   <li><a>Home</a></li>
   <li class="last">Dashboard</li>
 </ul>
-<div class="header-container mat-elevation-z1">
+<!-- <div class="header-container mat-elevation-z1">
   <span class="header-text">
     Dashboard
   </span>
-</div>
+</div> -->
 <div class="overall-container">
   <div class="container">
     <div class="left-div">
@@ -34,9 +34,9 @@
                   </button>
                 </div>
                 <div style="width: 60%; display: flex; flex-direction: column; justify-content: center;">
-                  <p class="dashboard">Sales : <span style="color: #4154f1; font-weight: bold;"> {{ subcount }} </span>
+                  <p class="dashboard">Sales : <span style="color: #4154f1; font-weight: bold; cursor: pointer" (click)="subPop('Sales','admin')"> {{ subcount }} </span>
                   </p>
-                  <p class="dashboard">Recruiting : <span style="color: #4154f1; font-weight: bold;"> {{ reccount }}
+                  <p class="dashboard">Recruiting : <span style="color: #4154f1; font-weight: bold; cursor: pointer" (click)="subPop('Recruiting','admin')"> {{ reccount }}
                     </span></p>
                 </div>
               </div>
@@ -66,8 +66,8 @@
                   <!-- <mat-icon class="class-icon">chat_bubble_outline</mat-icon> -->
                 </div>
                 <div style="width: 60%; display: flex; flex-direction: column; justify-content: center;">
-                  <p class="dashboard">Sales :<span style="color: #4154f1; font-weight: bold; ">{{sintcount}}</span></p>
-                  <p class="dashboard">Recruiting :<span style="color: #4154f1; font-weight: bold;">{{rintcount}}</span>
+                  <p class="dashboard">Sales :<span style="color: #4154f1; font-weight: bold; cursor: pointer" (click)="intPop('Sales','admin')">{{sintcount}}</span></p>
+                  <p class="dashboard">Recruiting :<span style="color: #4154f1; font-weight: bold; cursor: pointer" (click)="intPop('Recruiting','admin')">{{rintcount}}</span>
                   </p>
                 </div>
               </div>
@@ -98,15 +98,111 @@
                 </div>
                 <div style="width: 60%; display: flex; flex-direction: column; justify-content: center;">
                   <p class="dashboard">Sales :<span
-                      style="color: rgb(25,135,84); font-weight: bold;">{{sclosecount}}</span></p>
+                      style="color: rgb(25,135,84); font-weight: bold; cursor: pointer" (click)="closurePop('Sales','admin')">{{sclosecount}}</span></p>
                   <p class="dashboard">Recruiting :<span
-                      style="color: rgb(25,135,84); font-weight: bold;">{{rclosecount}}</span></p>
+                      style="color: rgb(25,135,84); font-weight: bold; cursor: pointer" (click)="closurePop('Recruiting','admin')">{{rclosecount}}</span></p>
                 </div>
               </div>
             </mat-card-content>
           </mat-card>
         </div>
       </div>
+
+      <div class="left-div-inner-cards" *ngIf="individualCounts">
+        <div class="card-1">
+          <mat-card>
+            <div class="card">
+              <mat-card-title>Submissions  <span>| {{ submissionFlagInd }}</span></mat-card-title>
+              <button mat-icon-button [matMenuTriggerFor]="menuSub">
+                <mat-icon>more_horiz</mat-icon>
+              </button>
+              <mat-menu #menuSub="matMenu">
+                <button mat-menu-item (click)="subCountInd('daily','Today')">Today </button>
+                <button mat-menu-item (click)="subCountInd('weekly','Weekly')">Weekly </button>
+                <button mat-menu-item (click)="subCountInd('monthly', 'Monthly')">Monthly </button>
+                <button mat-menu-item (click)="subCountInd('YearToDate', 'Yearly')">YTD </button>
+              </mat-menu>
+            </div>
+            <mat-card-content>
+              <div style="display: flex;">
+                <div style="width: 40%; align-items: center; justify-content: center; display: flex;">
+                  <button mat-fab class="submission-icon">
+                    <mat-icon>assignment</mat-icon>
+                  </button>
+                </div>
+                <div style="width: 60%; display: flex; flex-direction: column; justify-content: center;">
+                  <p class="dashboard">Sales : <span style="color: #4154f1; font-weight: bold; cursor: pointer" (click)="subPop('Sales','emp')"> {{ subcountIndividual }} </span>
+                  </p>
+                  <p class="dashboard">Recruiting : <span style="color: #4154f1; font-weight: bold; cursor: pointer" (click)="subPop('Recruiting','emp')"> {{ reccountIndividual }}
+                    </span></p>
+                </div>
+              </div>
+            </mat-card-content>
+          </mat-card>
+        </div>
+        <div class="card-2">
+          <mat-card>
+            <div class="card">
+              <mat-card-title>Interviews <span>| {{ interviewFlagInd }}</span></mat-card-title>
+              <button mat-icon-button [matMenuTriggerFor]="menuInt">
+                <mat-icon>more_horiz</mat-icon>
+              </button>
+              <mat-menu #menuInt="matMenu">
+                <button mat-menu-item (click)="intCountInd('daily','Daily')">Today </button>
+                <button mat-menu-item (click)="intCountInd('weekly','Weekly')">Weekly </button>
+                <button mat-menu-item (click)="intCountInd('monthly','Monthly')">Monthly </button>
+                <button mat-menu-item (click)="intCountInd('YearToDate','YTD')">YTD </button>
+              </mat-menu>
+            </div>
+            <mat-card-content>
+              <div style="display: flex;">
+                <div style="width: 40%; align-items: center; justify-content: center; display: flex;">
+                  <button mat-fab class="interview-icon">
+                    <mat-icon>chat_bubble_outline</mat-icon>
+                  </button>
+                </div>
+                <div style="width: 60%; display: flex; flex-direction: column; justify-content: center;">
+                  <p class="dashboard">Sales :<span style="color: #4154f1; font-weight: bold; cursor: pointer" (click)="intPop('Sales','emp')">{{sintcountIndividual}}</span></p>
+                  <p class="dashboard">Recruiting :<span style="color: #4154f1; font-weight: bold; cursor: pointer" (click)="intPop('Recruiting','emp')">{{rintcountIndividual}}</span>
+                  </p>
+                </div>
+              </div>
+            </mat-card-content>
+          </mat-card>
+        </div>
+        <div class="card-3">
+          <mat-card>
+            <div class="card">
+              <mat-card-title>Closures <span>| {{ closureFlagInd }} </span></mat-card-title>
+              <button mat-icon-button [matMenuTriggerFor]="menuClose">
+                <mat-icon>more_horiz</mat-icon>
+              </button>
+              <mat-menu #menuClose="matMenu">
+                <button mat-menu-item (click)="closureCountInd('daily','Daily')">Today</button>
+                <button mat-menu-item (click)="closureCountInd('weekly','Weekly')">Weekly</button>
+                <button mat-menu-item (click)="closureCountInd('monthly', 'Monthly')">Monthly</button>
+                <button mat-menu-item (click)="closureCountInd('YearToDate', 'YTD')">YTD</button>
+              </mat-menu>
+            </div>
+            <mat-card-content>
+              <div style="display: flex;">
+                <div style="width: 40%; align-items: center; justify-content: center; display: flex;">
+                  <button mat-fab class="closure-icon">
+                    <mat-icon>check_circle</mat-icon>
+                  </button>
+                </div>
+                <div style="width: 60%; display: flex; flex-direction: column; justify-content: center;">
+                  <p class="dashboard">Sales :<span
+                      style="color: rgb(25,135,84); font-weight: bold; cursor: pointer" (click)="closurePop('Sales','emp')">{{sclosecountIndividual}}</span></p>
+                  <p class="dashboard">Recruiting :<span
+                      style="color: rgb(25,135,84); font-weight: bold; cursor: pointer" (click)="closurePop('Recruiting','emp')">{{rclosecountIndividual}}</span></p>
+                </div>
+              </div>
+            </mat-card-content>
+          </mat-card>
+        </div>
+      </div>
+
       <div class="left-div-inner-table">
         <div class="table-container table-wrapper">
           <div class="header-container-leading-resources">
@@ -115,58 +211,40 @@
           <hr>
           <section class="table-style mat-elevation-z8">
             <table mat-table [dataSource]="dataSource" class="responsive-table">
-
-              <!--- Note that these columns can be defined in any order.
-                  The actual rendered columns are set as a property on the row definition" -->
-
-              <!-- Name Column -->
               <ng-container matColumnDef="Name">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Name"> Name </th>
                 <td mat-cell *matCellDef="let element">
                   <a href="{{ element.profile_url }}" target="_blank">{{ element.candidate_name }}</a>
                 </td>
               </ng-container>
-
-              <!-- Category Column -->
               <ng-container matColumnDef="Category">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Category"> Category
                 </th>
                 <td mat-cell *matCellDef="let element"> {{element?.category}} </td>
               </ng-container>
-
-              <!-- Address Column -->
               <ng-container matColumnDef="Address">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Address"> Address
                 </th>
                 <td mat-cell *matCellDef="let element"> {{element.address}} </td>
               </ng-container>
-
-              <!-- Email Column -->
               <ng-container matColumnDef="Email">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Email"> Email
                 </th>
                 <td mat-cell *matCellDef="let element"> {{element.email}} </td>
               </ng-container>
-
-              <!-- Contact Number Column -->
               <ng-container matColumnDef="ContactNumber">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Contact Number">
                   Contact </th>
                 <td mat-cell *matCellDef="let element">{{element.contactno}}</td>
               </ng-container>
-
-              <!-- Owner Column -->
               <ng-container matColumnDef="Owner">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Owner"> Owner
                 </th>
                 <td mat-cell *matCellDef="let element"> {{element.pseudoname}} </td>
               </ng-container>
-
-              <!-- Track Column -->
               <ng-container matColumnDef="Track">
                 <th mat-header-cell *matHeaderCellDef> Track </th>
                 <td mat-cell *matCellDef="let emp" class="action-buttons">
-                  <!-- lockedby -->
                   <button mat-raised-button class="track-button" *ngIf="emp.lockedby == userid " (click)="updateSlead(emp)">Update</button>
                 </td>
               </ng-container>
@@ -177,16 +255,13 @@
             <hr>
             <p class="no-data-found" *ngIf="!dataSource.filteredData.length">{{'No matching data found'}}</p>
           </section>
-
-
         </div>
       </div>
     </div>
     <div class="right-div">
-      <mat-card class="activity-card">
+      <mat-card [ngClass]=" individualCounts ? 'activity-card' : 'activity-card-individual' ">
         <div class="card-body">
           <h3 class="card-title bold-text">Recent Activity
-            <!-- <span>| Today</span> -->
           </h3>
           <div class="activity" *ngFor="let data of datarr">
             <div class="time">
@@ -207,11 +282,7 @@
                   </ng-template>
                 </span>
                 &nbsp;
-                <!-- <a title="Click Here to review" [routerLink]="['/edit-vendor',data.vms]" target="_blank" class="bold-text"> -->
                 {{data.company}}
-                <!-- </a> -->
-                <!-- <a title="Click Here to review" [routerLink]="['/edit-vendor',data.vms]" target="_blank" class="bold-text">
-                  {{data.company}} </a> -->
               </b>
             </div>
             <div class="activity-content" *ngIf="data.flg=='SUB-sales'">
@@ -265,7 +336,7 @@
     </div>
   </div>
 
-  <div class="table-container-dice table-wrapper" style="margin-bottom: 180px;">
+  <div class="table-container-dice table-wrapper" style="margin-bottom: 120px;">
     <div class="header-container-leading-resources">
       <span class="header-text">Dice Requirement Tags</span>
     </div>
