--- a/src/app/usit/components/reports/sourcing-reports/sourcing-reports.component.html
+++ b/src/app/usit/components/reports/sourcing-reports/sourcing-reports.component.html
@@ -1,106 +1,96 @@
 <ul class="breadcrumb">
-    <li><a (click)="navigateToDashboard()">Home</a></li>
-    <li class="last">Sourcing Report</li>
-  </ul>
-<form  [formGroup]="sourcingreport" (ngSubmit)="onSubmit()" >
+  <li><a (click)="navigateToDashboard()">Home</a></li>
+  <li class="last">Sourcing Report</li>
+</ul>
+<form [formGroup]="sourcingreport" (ngSubmit)="onSubmit()">
   <mat-card mt-3 style="z-index: 1">
     <mat-card-content>
       <mat-form-field color="accent">
         <mat-label>Choose Starting Date</mat-label>
-        <input matInput [matDatepicker]="picker1"  class="form-control" formControlName="startDate"/>
+        <input matInput [matDatepicker]="picker1" class="form-control" formControlName="startDate" />
         <mat-hint>MM/DD/YYYY</mat-hint>
-        <mat-datepicker-toggle
-          matIconSuffix
-          [for]="picker1"
-        ></mat-datepicker-toggle>
+        <mat-datepicker-toggle matIconSuffix [for]="picker1"></mat-datepicker-toggle>
         <mat-datepicker #picker1></mat-datepicker>
       </mat-form-field>
       &nbsp;&nbsp;
 
       <mat-form-field color="accent">
         <mat-label>Choose Ending Date</mat-label>
-
-        <input matInput [matDatepicker]="picker2" class="form-control"  formControlName="endDate"/>
+        <input matInput [matDatepicker]="picker2" class="form-control" formControlName="endDate" />
         <mat-hint>MM/DD/YYYY</mat-hint>
-        <mat-datepicker-toggle
-          matIconSuffix
-          [for]="picker2"
-        ></mat-datepicker-toggle>
-        <mat-datepicker
-          #picker2
-          color="primary"
-        ></mat-datepicker> </mat-form-field
-      >&nbsp;&nbsp;
+        <mat-datepicker-toggle matIconSuffix [for]="picker2"></mat-datepicker-toggle>
+        <mat-datepicker #picker2 color="primary"></mat-datepicker> </mat-form-field>&nbsp;&nbsp;
 
       <button (click)="onSubmit()" mat-raised-button color="primary">Submit</button>&nbsp;
       <button mat-raised-button color="warn" (click)="reset()">Reset</button>&nbsp;
       <!-- <button *ngIf="showReport" (click)="printPage()" mat-raised-button color="warn">Print</button> -->
       &nbsp;
-      <button *ngIf="showReport" mat-raised-button style="background-color: #4CAF50; color: white;" (click)="excelImport()">Excel Export</button>
+      <button *ngIf="showReport" mat-raised-button style="background-color: #4CAF50; color: white;"
+        (click)="excelImport()">Excel Export</button>
     </mat-card-content>
   </mat-card>
 </form>
 <mat-card class="matcards ">
-    <mat-card-content>
-        <section class="section">
-            <!-- <div class="show">
+  <mat-card-content>
+    <section class="section">
+      <!-- <div class="show">
                 Report From {{stdate}} To {{eddate}}
             </div> -->
-            <div class="row">
-                <table class="table table-sm  table-light table-bordered table-responsive">
-                    <thead class="thead-light">
-                        <tr>
-                            <th>Employee Name</th>
-                            <th>Initiated</th>
-                            <th>Completed</th>
-                            <th>Verified</th>
-                            <th>Rejected</th>
-                            <th>Move To Sale</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr *ngFor="let data of c_data">
-    
-                            <td style="font-weight: bold;">
-                                {{data.pseudoname}}
-                            </td>
-    
-                            <td class="narvee">
-                                <a  (click)="drilldown(data.userid,'initiated',data.pseudoname)" data-bs-toggle="modal"
-                                    data-bs-target="#consultantInfo">{{data.initiated}}</a>
-                            </td>
-                            <td class="narvee">
-                                <a  (click)="drilldown(data.userid,'completed',data.pseudoname)" data-bs-toggle="modal"
-                                    data-bs-target="#consultantInfo">{{data.completed}}</a>
-                            </td>
-                            <td class="narvee">
-                                <a  (click)="drilldown(data.userid,'verified',data.pseudoname)" data-bs-toggle="modal"
-                                    data-bs-target="#consultantInfo">{{data.verified}}</a>
-                            </td>
-                            <td class="narvee">
-                                <a  (click)="drilldown(data.userid ,'rejected',data.pseudoname)" data-bs-toggle="modal"
-                                    data-bs-target="#consultantInfo">{{data.rejected}}</a>
-                            </td>
-                            <td class="narvee">
-                                <a  (click)="drilldown(data.userid,'sales',data.pseudoname)" data-bs-toggle="modal"
-                                    data-bs-target="#consultantInfo">{{data.sales}}</a>
-                            </td>
-                        </tr>
-                        <tr class="narvee total">
-                            <td>Total</td>
-                            <td>{{initiated}}</td>
-                            <td>{{completed}}</td>
-                            <td>{{verified}}</td>
-                            <td>{{rejected}}</td>
-                            <td>{{sales}}</td>
-                        </tr>
-                    </tbody>
-                </table>
-                <!-- <div class="pagination justify-content-end">
+      <div class="row">
+        <table class="table table-sm  table-light table-bordered table-responsive">
+          <thead class="thead-light">
+            <tr>
+              <th>Employee Name</th>
+              <th>Initiated</th>
+              <th>Completed</th>
+              <th>Verified</th>
+              <th>Rejected</th>
+              <th>Move To Sale</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let data of c_data">
+
+              <td style="font-weight: bold;">
+                {{data.pseudoname}}
+              </td>
+
+              <td class="narvee">
+                <a (click)="drilldown(data.userid,'initiated',data.pseudoname)" data-bs-toggle="modal"
+                  data-bs-target="#consultantInfo">{{data.initiated}}</a>
+              </td>
+              <td class="narvee">
+                <a (click)="drilldown(data.userid,'completed',data.pseudoname)" data-bs-toggle="modal"
+                  data-bs-target="#consultantInfo">{{data.completed}}</a>
+              </td>
+              <td class="narvee">
+                <a (click)="drilldown(data.userid,'verified',data.pseudoname)" data-bs-toggle="modal"
+                  data-bs-target="#consultantInfo">{{data.verified}}</a>
+              </td>
+              <td class="narvee">
+                <a (click)="drilldown(data.userid ,'rejected',data.pseudoname)" data-bs-toggle="modal"
+                  data-bs-target="#consultantInfo">{{data.rejected}}</a>
+              </td>
+              <td class="narvee">
+                <a (click)="drilldown(data.userid,'sales',data.pseudoname)" data-bs-toggle="modal"
+                  data-bs-target="#consultantInfo">{{data.sales}}</a>
+              </td>
+            </tr>
+            <tr class="narvee total">
+              <td>Total</td>
+              <td>{{initiated}}</td>
+              <td>{{completed}}</td>
+              <td>{{verified}}</td>
+              <td>{{rejected}}</td>
+              <td>{{sales}}</td>
+            </tr>
+          </tbody>
+        </table>
+        <!-- <div class="pagination justify-content-end">
                     <pagination-controls previousLabel="Prev" nextLabel="Next" (pageChange)="onTableDataChange($event)">
                     </pagination-controls>
                 </div> -->
-            </div>
-        </section>
-</mat-card-content>
+      </div>
+    </section>
+  </mat-card-content>
 </mat-card>
