logo change, table stylings, req-info in submissions and entire hot-list download

--- a/src/app/usit/components/Immigration/h1b-immigration/h1b-immigration.component.scss
+++ b/src/app/usit/components/Immigration/h1b-immigration/h1b-immigration.component.scss
@@ -214,3 +214,9 @@
   .mat-mdc-row {
     height: 30px !important;
   }
+
+  @media screen and (min-width: 1920px) {
+    .h1b-container {
+      height: 90vh;
+    }
+  }
