--- a/src/app/usit/components/employee-list/employee-list.component.scss
+++ b/src/app/usit/components/employee-list/employee-list.component.scss
@@ -242,3 +242,9 @@ ul.breadcrumb li:last-child {
     overflow: auto;
   }
 }
+
+@media screen and (min-width: 1920px) {
+  .container {
+    height: 90vh;
+  }
+}
