--- a/src/app/usit/components/masters/qualification-list/qualification-list.component.html
+++ b/src/app/usit/components/masters/qualification-list/qualification-list.component.html
@@ -57,6 +57,8 @@
       <p class="no-data-found" *ngIf="!dataSource.filteredData.length">{{'No matching data found'}}</p>
     </section>
     <hr>
+  </div>
+  <div class="paginator">
     <!-- paginator -->
   <mat-paginator #paginator [length]="dataSource.data.length" (page)="handlePageEvent($event)" [length]="length"
   [pageSize]="pageSize" [disabled]="false" [showFirstLastButtons]="showFirstLastButtons"
