--- a/src/app/usit/components/rssfed/rssfed.component.scss
+++ b/src/app/usit/components/rssfed/rssfed.component.scss
@@ -122,7 +122,7 @@
   
   .hot-list-table-style {
     padding: 0 2px;
-    width: max-content;
+    width: 100%;
     max-height: calc(100% - 3px);
     overflow: auto;
     display: block;
