--- a/src/app/usit/components/sales/consultant-list/consultant-info/consultant-info.component.html
+++ b/src/app/usit/components/sales/consultant-list/consultant-info/consultant-info.component.html
@@ -1,6 +1,6 @@
 <div class="breadcrumb-container">
   <ul class="breadcrumb">
-    <li><a>Home</a></li>
+    <li><a [routerLink]="'usit/dashboard'">Home</a></li>
     <li>{{ flag | titlecase }}</li>
     <li>Employee</li>
   </ul>
