--- a/src/app/taskmodule/task-list/task-list.component.scss
+++ b/src/app/taskmodule/task-list/task-list.component.scss
@@ -124,7 +124,7 @@
   
   .interview-table-style {
     padding: 0 2px;
-    width: max-content;
+    width: 100%;
     max-height: calc(100% - 3px);
     overflow: auto;
     display: block;
