--- a/src/app/usit/components/Immigration/future-opt-cpt/future-opt-cpt.component.html
+++ b/src/app/usit/components/Immigration/future-opt-cpt/future-opt-cpt.component.html
@@ -92,9 +92,11 @@
                 <ng-container matColumnDef="Action">
                     <th mat-header-cell *matHeaderCellDef> Action </th>
                     <td mat-cell *matCellDef="let optcpt">
-                        <button  mat-icon-button (click)="editOptCpt(optcpt)" class="action-button-ed">
-                            <mat-icon>edit</mat-icon>
-                        </button>
+                        <span class="action-buttons">
+                            <button  mat-icon-button (click)="editOptCpt(optcpt)" class="action-button-ed">
+                                <mat-icon>edit</mat-icon>
+                            </button>
+                        </span>
                         <!-- <button mat-icon-button (click)="deleteInterview(interview)" class="action-button-ed">
                             <mat-icon [ngClass]="'delete-icon'">delete</mat-icon>
                         </button> -->
