--- a/src/app/usit/components/Immigration/future-opt-cpt/future-opt-cpt.component.scss
+++ b/src/app/usit/components/Immigration/future-opt-cpt/future-opt-cpt.component.scss
@@ -126,7 +126,7 @@
   
   .future-opt-cpt-table-style {
     padding: 0 2px;
-    width: max-content;
+    width: 100%;
     max-height: calc(100% - 3px);
     overflow: auto;
     display: block;
@@ -202,13 +202,13 @@
     column-gap: 5px;
   }
   
-  @media screen and (min-width: 2000px) {
-    .future-opt-cpt-table-style {
-      width: 100%;
-      height: calc(100% - 8px);
-      overflow: auto;
-    }
-  }
+  // @media screen and (min-width: 2000px) {
+  //   .future-opt-cpt-table-style {
+  //     width: 100%;
+  //     height: calc(100% - 8px);
+  //     overflow: auto;
+  //   }
+  // }
   
   .edit-icon,
   .delete-icon {
