--- a/src/app/usit/components/Immigration/h1b-immigration/h1b-immigration.component.html
+++ b/src/app/usit/components/Immigration/h1b-immigration/h1b-immigration.component.html
@@ -77,9 +77,12 @@
                 <ng-container matColumnDef="Action">
                     <th mat-header-cell *matHeaderCellDef> Action </th>
                     <td mat-cell *matCellDef="let h1b">
-                        <button  mat-icon-button (click)="editH1b(h1b)" class="action-button-ed">
-                            <mat-icon>edit</mat-icon>
-                        </button>
+                        <span class="action-buttons">
+                            <button  mat-icon-button (click)="editH1b(h1b)" class="action-button-ed">
+                                <mat-icon>edit</mat-icon>
+                            </button>
+                        </span>
+                        
                         <!-- <button mat-icon-button (click)="deleteInterview(interview)" class="action-button-ed">
                             <mat-icon [ngClass]="'delete-icon'">delete</mat-icon>
                         </button> -->
