--- a/src/app/usit/components/masters/companies-list/companies-list.component.html
+++ b/src/app/usit/components/masters/companies-list/companies-list.component.html
@@ -57,12 +57,13 @@
       </table>
       <p class="no-data-found" *ngIf="!dataSource.filteredData.length">{{'No matching data found'}}</p>
       <hr>
-      <!-- paginator -->
+  </div>
+  <div class="paginator">
+    <!-- paginator -->
     <mat-paginator #paginator [length]="dataSource.data.length" (page)="handlePageEvent($event)" [length]="length"
     [pageSize]="pageSize" [disabled]="false" [showFirstLastButtons]="showFirstLastButtons"
     [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []" [hidePageSize]="hidePageSize"
     [pageIndex]="pageIndex" aria-label="Select page">
   </mat-paginator>
-
   </div>
 </div>
