--- a/src/app/usit/components/sales/consultant-list/add-consultant/add-consultant.component.html
+++ b/src/app/usit/components/sales/consultant-list/add-consultant/add-consultant.component.html
@@ -192,7 +192,7 @@
             Name is required</mat-error>
         </mat-form-field>
           <!-- Technology -->
-          <div class="select-technology-field">
+          <!-- <div class="select-technology-field">
             <mat-form-field appearance="fill">
               <mat-label>Select Technology</mat-label>
               <mat-select name="technology" formControlName="technology" (selectionChange)="techskills($event)">
@@ -200,6 +200,20 @@
                   {{ option[1] }}
                 </mat-option>
               </mat-select>
+              <button matSuffix mat-icon-button (click)="onAddTechnology();$event.preventDefault();$event.stopImmediatePropagation()"><mat-icon>add</mat-icon></button>
+              <mat-error *ngIf="consultantForm.get('technology').hasError('required')">Technology is required</mat-error>
+            </mat-form-field>
+          </div> -->
+
+          <div class="select-technology-field">
+            <mat-form-field appearance="fill">
+              <mat-label>Select Technology</mat-label>
+              <input matInput formControlName="technology" [matAutocomplete]="techAutoCmp" maxlength="75">
+              <mat-autocomplete #techAutoCmp="matAutocomplete">
+                <mat-option *ngFor="let option of (searchTechOptions$ | async)" (selectionChange)="techskills($event)" [value]="option[0]">
+                  {{ option[1] }}
+                </mat-option>
+              </mat-autocomplete>
               <button matSuffix mat-icon-button (click)="onAddTechnology();$event.preventDefault();$event.stopImmediatePropagation()"><mat-icon>add</mat-icon></button>
               <mat-error *ngIf="consultantForm.get('technology').hasError('required')">Technology is required</mat-error>
             </mat-form-field>
