--- a/src/app/usit/components/sales/hot-list/hot-list.component.html
+++ b/src/app/usit/components/sales/hot-list/hot-list.component.html
@@ -13,7 +13,7 @@
             <button *ngIf="showReport" class="search" mat-raised-button color="primary" (click)="handleExport()">Excel
                 Import</button>
             <div class="search-hot-list">
-                <input matInput type="text" class="search" placeholder="search Hot List" (keyup)="applyFilter($event)">
+                <input matInput type="text" class="search" placeholder="search Hot List" (keyup)="onFilter($event)">
             </div>
         </div>
     </div>
@@ -123,10 +123,11 @@
 
     <div class="paginator">
         <!-- paginator -->
-        <mat-paginator (page)="handlePageEvent($event)" [length]="totalItems" [pageSize]="pageSize" [disabled]="false"
-            [showFirstLastButtons]="showFirstLastButtons" [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
-            [hidePageSize]="true" [pageIndex]="currentPageIndex" aria-label="Select page">
-        </mat-paginator>
+        <mat-paginator #paginator [length]="dataSource.data.length" (page)="handlePageEvent($event)" [length]="length"
+  [pageSize]="pageSize" [disabled]="false" [showFirstLastButtons]="showFirstLastButtons"
+  [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []" [hidePageSize]="hidePageSize"
+  [pageIndex]="pageIndex" aria-label="Select page">
+</mat-paginator>
     </div>
 
 </div>
