--- a/src/app/usit/components/vendor-management/recruiter-list/recruiter-list.component.scss
+++ b/src/app/usit/components/vendor-management/recruiter-list/recruiter-list.component.scss
@@ -141,7 +141,7 @@ tbody {
 .recruiter-table-style {
   //width: max-content;
   width: 100%;
-  max-height: 60svh;
+  max-height: calc(100% - 2px);
   overflow-y: auto;
   //display: block;
 }
@@ -292,4 +292,10 @@ td.approve-buttons.cdk-cell.cdk-column-Approve-Reject.mat-column-Approve-Reject.
   cursor: pointer;
   margin-bottom: 2px;
   color: #0275d8;
+}
+
+@media screen and (min-width: 1920px) {
+  .container {
+    height: 90vh;
+  }
 }
