--- a/src/app/usit/components/vendor-management/recruiter-list/recruiter-list.component.html
+++ b/src/app/usit/components/vendor-management/recruiter-list/recruiter-list.component.html
@@ -5,82 +5,79 @@
   </ul>
   <div class="header-container mat-elevation-z1">
     <span class="header-text"> Recruiters </span>
-    <div class="filter-recruiters">
-      <button mat-raised-button class="filter-button" color="warn" (click)="getAllVendorByType('Recruiter')">Technical Recruiter</button>
-      <button mat-raised-button class="filter-button" color="primary" (click)="getAllVendorByType('Bench Sales')">Bench Sales Recruiter</button>
-      <button mat-raised-button class="filter-button" style="background-color: black; color: white;"  (click)="getAllVendorByType('Both')">Both Technical & Bench Sales Recruiters</button>
-    </div>
+    <!-- <div class="filter-recruiters">
+      <button mat-raised-button class="filter-button" color="warn" (click)="getAllVendorByType('Recruiter')">Technical
+        Recruiter</button>
+      <button mat-raised-button class="filter-button" color="primary" (click)="getAllVendorByType('Bench Sales')">Bench
+        Sales Recruiter</button>
+      <button mat-raised-button class="filter-button" style="background-color: black; color: white;"
+        (click)="getAllVendorByType('Both')">Both Technical & Bench Sales Recruiters</button>
+    </div> -->
 
     <div class="recruiter-actions">
       <!-- <button mat-icon-button (click)="uploadRecruiterExcel()">
         <mat-icon>upload</mat-icon>
       </button> -->
-      <button [disabled]="!privilegeServ.hasPrivilege('ADD_RECRUITER')" mat-icon-button class="add-user" (click)="addRecruiter()" matTooltip="Add Recruiter" matTooltipPosition="above">
+      <button [disabled]="!privilegeServ.hasPrivilege('ADD_RECRUITER')" mat-icon-button class="add-user"
+        (click)="addRecruiter()" matTooltip="Add Recruiter" matTooltipPosition="above">
         <mat-icon [ngClass]="{'item-icon': privilegeServ.hasPrivilege('ADD_RECRUITER')}">add_circle</mat-icon>
       </button>
 
       <div class="search-recruiter">
-        <input
-          matInput
-          type="text"
-          class="search"
-          placeholder="search recruiter"
-          (keyup)="applyFilter($event)"
-        />
+        <input matInput type="text" class="search" placeholder="search recruiter" (keyup)="applyFilter($event)" />
       </div>
     </div>
   </div>
   <div id="table-container" class="table-wrapper">
     <section class="recruiter-table-style">
       <table mat-table [dataSource]="dataSource" matSort (matSortChange)="onSort($event)" oncopy="return false"
-      onpaste="return false" oncut="return false">
+        onpaste="return false" oncut="return false">
         <ng-container matColumnDef="SerialNum">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>S.No</th>
           <td mat-cell *matCellDef="let recruiter">{{ recruiter?.serialNum }}</td>
         </ng-container>
 
         <ng-container matColumnDef="Company">
-          <th mat-header-cell *matHeaderCellDef >Company</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Company</th>
           <td mat-cell *matCellDef="let recruiter">{{ recruiter.company }}</td>
         </ng-container>
 
         <ng-container matColumnDef="RecruiterName">
-          <th mat-header-cell *matHeaderCellDef >Recruiter Name</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Recruiter Name</th>
           <td mat-cell *matCellDef="let recruiter">{{ recruiter.recruiter }}</td>
         </ng-container>
 
         <ng-container matColumnDef="PhoneNumber">
-          <th mat-header-cell *matHeaderCellDef >Phone Number</th>
+          <th mat-header-cell *matHeaderCellDef  mat-sort-header>Phone Number</th>
           <td mat-cell *matCellDef="let recruiter">
             <span>
-
-              {{ recruiter.usnumber == null ?  recruiter.contactnumber : recruiter.usnumber}}
-
+              {{ recruiter.usnumber == null ? recruiter.contactnumber : recruiter.usnumber}}
             </span>
             <br>
-            <span *ngIf="recruiter.extension!=null && recruiter.extension!='0' && recruiter.extension!=''"> Ext : {{recruiter.extension}}</span>
+            <span *ngIf="recruiter.extension!=null && recruiter.extension!='0' && recruiter.extension!=''"> Ext :
+              {{recruiter.extension}}</span>
           </td>
         </ng-container>
 
-        <ng-container matColumnDef="Email">
-          <th mat-header-cell *matHeaderCellDef >Email</th>
+        <ng-container matColumnDef="Email" >
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
           <td mat-cell *matCellDef="let recruiter">{{ recruiter.email }}</td>
         </ng-container>
 
         <ng-container matColumnDef="AddedBy">
-          <th mat-header-cell *matHeaderCellDef >Added By</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Added By</th>
           <td mat-cell *matCellDef="let recruiter">
             <span class="user-info" (click)="goToUserInfo(recruiter.addedby)">{{ recruiter.pseudoname }}</span>
           </td>
         </ng-container>
 
         <ng-container matColumnDef="AddedOn">
-          <th mat-header-cell *matHeaderCellDef >Added On</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Added On</th>
           <td mat-cell *matCellDef="let recruiter">{{ recruiter.createddate | date:'yyyy-MM-dd'}}</td>
         </ng-container>
 
         <ng-container matColumnDef="LastUpdated">
-          <th mat-header-cell *matHeaderCellDef >Last Updated</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Last Updated</th>
           <td mat-cell *matCellDef="let recruiter">{{ recruiter.updateddate | date:'yyyy-MM-dd'}}</td>
         </ng-container>
 
@@ -102,60 +99,61 @@
           <th mat-header-cell *matHeaderCellDef>Action</th>
           <td mat-cell *matCellDef="let recruiter" class="action-buttons">
             <span class="action-btns">
-            <button [disabled]="!privilegeServ.hasPrivilege('EDIT_RECRUITER')" mat-icon-button (click)="editRecruiter(recruiter)" class="action-button-ed" *ngIf="hasAcces!='Employee'  && hasAcces!='Team Lead'">
-              <mat-icon [ngClass]="{'edit-icon': privilegeServ.hasPrivilege('EDIT_RECRUITER')}">edit</mat-icon>
-            </button>
+              <button [disabled]="!privilegeServ.hasPrivilege('EDIT_RECRUITER')" mat-icon-button
+                (click)="editRecruiter(recruiter)" class="action-button-ed"
+                *ngIf="hasAcces!='Employee'  && hasAcces!='Team Lead'">
+                <mat-icon [ngClass]="{'edit-icon': privilegeServ.hasPrivilege('EDIT_RECRUITER')}">edit</mat-icon>
+              </button>
 
-            <button [disabled]="!privilegeServ.hasPrivilege('DELETE_RECRUITER')" mat-icon-button (click)="deleteRecruiter(recruiter)" class="action-button-ed" *ngIf="hasAcces!='Employee'  && hasAcces!='Team Lead'">
-              <mat-icon  [ngClass]="{'delete-icon': privilegeServ.hasPrivilege('DELETE_RECRUITER')}">delete</mat-icon>
-            </button>
+              <button [disabled]="!privilegeServ.hasPrivilege('DELETE_RECRUITER')" mat-icon-button
+                (click)="deleteRecruiter(recruiter)" class="action-button-ed"
+                *ngIf="hasAcces!='Employee'  && hasAcces!='Team Lead'">
+                <mat-icon [ngClass]="{'delete-icon': privilegeServ.hasPrivilege('DELETE_RECRUITER')}">delete</mat-icon>
+              </button>
             </span>
           </td>
         </ng-container>
 
         <ng-container matColumnDef="Approve/Reject">
-          <th mat-header-cell *matHeaderCellDef >Approve/Reject</th>
+          <th mat-header-cell *matHeaderCellDef>Approve/Reject</th>
           <td mat-cell *matCellDef="let recruiter" class="approve-buttons">
-                <ng-container *ngIf="['Approved'].includes(recruiter.rec_stat);  else ifNotApproved">
+            <ng-container *ngIf="['Approved'].includes(recruiter.rec_stat);  else ifNotApproved">
 
-                  <button [disabled]="!privilegeServ.hasPrivilege('STATUS_RECRUITER')" mat-raised-button (click)="onApproveOrRejectRecruiter(recruiter)" class="approve-reject-buttons"
-                    [ngStyle]="{ color: 'white' }"
-                    style="width: 75px; height: 25px;"
-                    [ngClass]="recruiter.rec_stat === 'Approved'  ?   'mat-primary' : recruiter.rec_stat === 'Initiated'  ?  'mat-secondary' : 'mat-warn'">
-                    {{recruiter.rec_stat}}
-                  </button>
+              <button [disabled]="!privilegeServ.hasPrivilege('STATUS_RECRUITER')" mat-raised-button
+                (click)="onApproveOrRejectRecruiter(recruiter)" class="approve-reject-buttons"
+                [ngStyle]="{ color: 'white' }" style="width: 75px; height: 25px;"
+                [ngClass]="recruiter.rec_stat === 'Approved'  ?   'mat-primary' : recruiter.rec_stat === 'Initiated'  ?  'mat-secondary' : 'mat-warn'">
+                {{recruiter.rec_stat}}
+              </button>
 
-                </ng-container >
-                  <ng-template #ifNotApproved>
-                    <!-- Initiated BUTTON -->
-                    <button [disabled]="!privilegeServ.hasPrivilege('STATUS_RECRUITER')"  *ngIf="['Initiated', 'Approved'].includes(recruiter.rec_stat)" class="approve-reject-buttons" mat-raised-button (click)="onApproveOrRejectRecruiter(recruiter)"
-                    [ngStyle]="{ color: 'white' }"
-                    style="width: 75px; height: 25px;"
-                    [ngClass]="'mat-primary'"> {{recruiter.rec_stat}}
-                  </button>
+            </ng-container>
+            <ng-template #ifNotApproved>
+              <!-- Initiated BUTTON -->
+              <button [disabled]="!privilegeServ.hasPrivilege('STATUS_RECRUITER')"
+                *ngIf="['Initiated', 'Approved'].includes(recruiter.rec_stat)" class="approve-reject-buttons"
+                mat-raised-button (click)="onApproveOrRejectRecruiter(recruiter)" [ngStyle]="{ color: 'white' }"
+                style="width: 75px; height: 25px;" [ngClass]="'mat-primary'"> {{recruiter.rec_stat}}
+              </button>
 
-                  <!-- Reject BUTTON -->
+              <!-- Reject BUTTON -->
 
-                    <button [disabled]="!privilegeServ.hasPrivilege('STATUS_RECRUITER')" *ngIf="recruiter.rec_stat !== 'Approved' && recruiter.rec_stat !== 'Rejected'" mat-raised-button (click)="onApproveOrRejectRecruiter(recruiter, true)" class="approve-reject-buttons"
-                    [ngStyle]="{ color: 'white' }"
-                    style="width: 75px; height: 25px;"
-                    [ngClass]="'mat-warn'"> {{'Reject'}}
-                  </button>
+              <button [disabled]="!privilegeServ.hasPrivilege('STATUS_RECRUITER')"
+                *ngIf="recruiter.rec_stat !== 'Approved' && recruiter.rec_stat !== 'Rejected'" mat-raised-button
+                (click)="onApproveOrRejectRecruiter(recruiter, true)" class="approve-reject-buttons"
+                [ngStyle]="{ color: 'white' }" style="width: 75px; height: 25px;" [ngClass]="'mat-warn'"> {{'Reject'}}
+              </button>
 
-                  <button [disabled]="!privilegeServ.hasPrivilege('STATUS_RECRUITER')"  *ngIf="recruiter.rec_stat === 'Rejected'" mat-raised-button class="approve-reject-buttons"
-              [ngStyle]="{ color: 'white' }"
-              style="width: 75px; height: 25px;"
-              [ngClass]="'mat-warn'"> {{recruiter.rec_stat}}
-            </button>
+              <button [disabled]="!privilegeServ.hasPrivilege('STATUS_RECRUITER')"
+                *ngIf="recruiter.rec_stat === 'Rejected'" mat-raised-button class="approve-reject-buttons"
+                [ngStyle]="{ color: 'white' }" style="width: 75px; height: 25px;" [ngClass]="'mat-warn'">
+                {{recruiter.rec_stat}}
+              </button>
 
-                </ng-template>
+            </ng-template>
           </td>
         </ng-container>
 
-        <tr
-          mat-header-row
-          *matHeaderRowDef="dataTableColumns; sticky: true"
-        ></tr>
+        <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
         <tr mat-row *matRowDef="let row; columns: dataTableColumns" [ngClass]="getRecruiterRowClass(row)"></tr>
 
       </table>
@@ -169,18 +167,10 @@
   </div>
   <div class="paginator">
     <!-- paginator -->
-    <mat-paginator
-      [length]="totalItems"
-      (page)="handlePageEvent($event)"
-      [length]="length"
-      [pageSize]="pageSize"
-      [disabled]="false"
-      [showFirstLastButtons]="showFirstLastButtons"
-      [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
-      [hidePageSize]="hidePageSize"
-      [pageIndex]="currentPageIndex"
-      aria-label="Select page"
-    >
+    <mat-paginator [length]="totalItems" (page)="handlePageEvent($event)" [length]="length" [pageSize]="pageSize"
+      [disabled]="false" [showFirstLastButtons]="showFirstLastButtons"
+      [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []" [hidePageSize]="hidePageSize"
+      [pageIndex]="currentPageIndex" aria-label="Select page">
     </mat-paginator>
   </div>
 </div>
