--- a/src/app/usit/components/vendor-management/vendor-list/vendor-list.component.html
+++ b/src/app/usit/components/vendor-management/vendor-list/vendor-list.component.html
@@ -7,14 +7,14 @@
     <span class="header-text">
       Vendors
     </span>
-    <span class="filter-vendors">
+    <!-- <span class="filter-vendors">
       <button mat-raised-button class="filter-button" color="warn" (click)="getAllVendorByType('Recruiting')">Recruiting
         Companies</button>
       <button mat-raised-button class="filter-button" color="primary" (click)="getAllVendorByType('Bench Sales')">Bench
         Companies</button>
       <button mat-raised-button class="filter-button" style="background-color: black; color: white;"
         (click)="getAllVendorByType('Both')">Both Recruiting & Staffing</button>
-    </span>
+    </span> -->
     <div class="vendor-actions">
       <!-- <button mat-icon-button class="add-user" (click)="uploadVendor()">
         <mat-icon class="item-icon">upload</mat-icon>
@@ -45,7 +45,7 @@
 
         <!-- Company Column mat-sort-header sortActionDescription="Sort by Company"-->
         <ng-container matColumnDef="Company">
-          <th mat-header-cell *matHeaderCellDef > Company</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header > Company</th>
           <td mat-cell *matCellDef="let element">
             <span class="company-recruiter-info" (click)="goToCompanyRecInfo(element)"> {{element.company}}</span>
           </td>
@@ -53,7 +53,7 @@
 
         <!-- HeadQuarter Column mat-sort-header sortActionDescription="Sort by Head Quarter"-->
         <ng-container matColumnDef="HeadQuarter">
-          <th mat-header-cell *matHeaderCellDef > Head
+          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by headquerter" > Head
             Quarter </th>
           <td mat-cell *matCellDef="let element"> {{element.headquerter}} </td>
         </ng-container>
@@ -66,21 +66,21 @@
 
         <!-- VendorType Column mat-sort-header  -->
         <ng-container matColumnDef="VendorType">
-          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by VendorType"> Vendor Type
+          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by vendortype"  mat-sort-header > Vendor Type
           </th>
           <td mat-cell *matCellDef="let element"> {{element.vendortype}} </td>
         </ng-container>
 
         <!-- TierType Column -->
         <ng-container matColumnDef="TierType">
-          <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Tier Type"> Tier Type
+          <th mat-header-cell *matHeaderCellDef  mat-sort-header sortActionDescription="Sort by tyretype"> Tier Type
           </th>
           <td mat-cell *matCellDef="let element" > {{element.tyretype}} </td>
         </ng-container>
 
         <!-- AddedBy Column -->
         <ng-container matColumnDef="AddedBy">
-          <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by AddedBy"> Added By </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header  sortActionDescription="Sort by pseudoname"> Added By </th>
           <td mat-cell *matCellDef="let element">
             <span class="user-info" (click)="goToUserInfo(element.addedby)" > {{element.pseudoname}}  </span>
           </td>
@@ -88,13 +88,13 @@
 
         <!-- AddedOn Column -->
         <ng-container matColumnDef="AddedOn">
-          <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by AddedOn"> Added On </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by createddate"> Added On </th>
           <td mat-cell *matCellDef="let element"> {{element.createddate | date:'yyyy-MM-dd'}} </td>
         </ng-container>
 
         <!-- LastUpdated Column -->
         <ng-container matColumnDef="LastUpdated">
-          <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Last Updated"> Last
+          <th mat-header-cell *matHeaderCellDef mat-sort-header  sortActionDescription="Sort by updateddate"> Last
             Updated </th>
           <td mat-cell *matCellDef="let element"> {{element.updateddate  | date:'yyyy-MM-dd'}} </td>
         </ng-container>
